Build some normal page

--- a/Contact.html
+++ b/Contact.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="Contact.css">
-    <link rel="icon" href="img/LOGO DKTECH.png" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/Contact.css">
+    <link rel="icon" href="./css/img/LOGO DKTECH.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
@@ -23,7 +23,7 @@
 <body>
     <header>
         <div id="header_logo">
-            <img src="img/LOGO DKTECH.png" alt="Logo DKTECH">
+            <img src="./css/img/LOGO DKTECH.png" alt="Logo DKTECH">
             <div>
                 <p>CÔNG TY TNHH THIẾT BỊ CÔNG NGHIỆP DKTECH VIỆT NAM</p>
                 <p>Số 58, Đường N3-7, KĐT Sinh Thái Chánh Mỹ, Tổ 15, Khu Phố Mỹ Hảo 2, Phường Chánh Mỹ, Thành Phố Thủ
@@ -58,111 +58,118 @@
     <nav>
         <div id="navbar_pc">
             <ul>
-                <li class="navbar_pc_item"><a href="index.html">TRANG CHỦ</a></li>
+                <li class="navbar_pc_item"><a href="./index.html">TRANG CHỦ</a></li>
                 <li class="navbar_pc_item"><a href="#">GIỚI THIỆU</a></li>
                 <li class="navbar_pc_item"><a href="#">DẦU NHỚT CHÍNH HÃNG</a></li>
                 <li class="navbar_pc_item"><a href="#">DỊCH VỤ</a></li>
-                <li class="navbar_pc_item"><a href="#">TIN TỨC</a></li>
-                <li class="navbar_pc_item" style="background-color: rgb(0, 102, 255);"><a href="./Contact.html">LIÊN
-                        HỆ</a></li>
+                <li class="navbar_pc_item"><a href="./news.html">TIN TỨC</a></li>
+                <li class="navbar_pc_item" style="background-color: rgb(0, 102, 255);"><a href="./Contact.html"
+                        style="color: #f2f2f2;">LIÊN HỆ</a></li>
             </ul>
         </div>
         <div id="navbar_pc_menu">
             <ul id="navbar_pc_menu_item">
                 <li class="navbar_pc_menu_item_type"><a href="#">Tectyl</a></li>
                 <li class="navbar_pc_menu_item_type"><a href="#">SHL</a></li>
+                <li class="navbar_pc_menu_item_type"><a href="#">MOBIL</a></li>
                 <li class="navbar_pc_menu_item_type"><a href="#">Các loại khác</a></li>
             </ul>
             <ul id="navbar_pc_menu_item_tectyl">
                 <li class="navbar_pc_item_type_tectyl">
-                    <a href="#">Dầu chống rỉ RP 361</a>
+                    <a href="./RP-361.html">Dầu chống rỉ RP 361</a>
                 </li>
                 <li class="navbar_pc_item_type_tectyl">
-                    <a href="#">Dầu thủy lực công nghiệp HYDRAULIC 32</a>
+                    <a href="./HYDRAULIC-32.html">Dầu thủy lực công nghiệp HYDRAULIC 32</a>
                 </li>
                 <li class="navbar_pc_item_type_tectyl">
-                    <a href="#">Dầu rãnh trượt cao cấp WL 68A</a>
+                    <a href="./WL-68A.html">Dầu rãnh trượt cao cấp WL 68A</a>
                 </li>
             </ul>
             <ul id="navbar_pc_menu_item_shl">
                 <li class="navbar_pc_item_type_shl">
-                    <a href="#">Dầu nhờn trục quay SPINDLE V10</a>
+                    <a href="./SPINDLE-V10.html">Dầu nhờn trục quay SPINDLE V10</a>
                 </li>
                 <li class="navbar_pc_item_type_shl">
-                    <a href="#">Dầu nhờn trục quay SPINDLE V5</a>
+                    <a href="./SPINDLE-V5.html">Dầu nhờn trục quay SPINDLE V5</a>
                 </li>
                 <li class="navbar_pc_item_type_shl">
-                    <a href="#">Dầu thủy lực công nghiệp SYNTHDRO 32AW</a>
+                    <a href="./SHL-SYNTHDRO-32AW.html">Dầu thủy lực công nghiệp SYNTHDRO 32AW</a>
                 </li>
                 <li class="navbar_pc_item_type_shl">
-                    <a href="#">Dầu nhờn rãnh trượt SYNTHWAY 68M</a>
+                    <a href="./SYNTHWAY-68M.html">Dầu nhờn rãnh trượt SYNTHWAY 68M</a>
                 </li>
                 <li class="navbar_pc_item_type_shl">
-                    <a href="#">Dầu chống rỉ SAMLEX HP 5025V</a>
+                    <a href="./SAMLEX-HP-5025V.html">Dầu chống rỉ SAMLEX HP 5025V</a>
                 </li>
                 <li class="navbar_pc_item_type_shl">
-                    <a href="#">Sáp chống rỉ SAMLEX WAXY 70A</a>
+                    <a href="./SAMLEX-WAXY-70A.html">Sáp chống rỉ SAMLEX WAXY 70A</a>
                 </li>
             </ul>
         </div>
         <div id="navbar_toggle" onclick="toggleNavbar()">☰ Menu</div>
         <div id="navbar_phone">
             <ul>
-                <li class="navbar_phone_item"><a href="index.html">TRANG CHỦ</a></li>
+                <li class="navbar_phone_item"><a href="./index.html">TRANG CHỦ</a></li>
                 <li class="navbar_phone_item"><a href="#">GIỚI THIỆU</a></li>
-                <li class="navbar_phone_item" onclick="activeNavbarPhoneMenuItem('navbar_phone_menu_item')"><a
-                        href="#">DẦU NHỚT
-                        CHÍNH HÃNG <i class="fa-solid fa-arrow-right"></i></a></li>
+                <li class="navbar_phone_item">
+                    <a href="#">DẦU NHỚT CHÍNH HÃNG</a>
+                    <i class="fa-solid fa-arrow-right right-arrow"
+                        onclick="activeNavbarPhoneMenuItem('navbar_phone_menu_item');changeArrowDirection(this);"></i>
+                </li>
                 <ul id="navbar_phone_menu_item">
-                    <li class="navbar_phone_menu_item_type"
-                        onclick="activeNavbarPhoneMenuItemType('navbar_phone_menu_item_tectyl', 'Tectyl')">
-                        <a href="#">Tectyl <i class="fa-solid fa-arrow-right"></i></a>
+                    <li class="navbar_phone_menu_item_type">
+                        <a href="#">Tectyl</a>
+                        <i class="fa-solid fa-arrow-right right-arrow"
+                            onclick="activeNavbarPhoneMenuItemType('navbar_phone_menu_item_tectyl', 'Tectyl');changeArrowDirection(this);"></i>
                     </li>
                     <ul id="navbar_phone_menu_item_tectyl">
                         <li class="navbar_phone_item_type_tectyl">
-                            <a href="#">Dầu chống rỉ RP 361</a>
+                            <a href="./RP-361.html">Dầu chống rỉ RP 361</a>
                         </li>
                         <li class="navbar_phone_item_type_tectyl">
-                            <a href="#">Dầu thủy lực công nghiệp HYDRAULIC 32</a>
+                            <a href="./HYDRAULIC-32.html">Dầu thủy lực công nghiệp HYDRAULIC 32</a>
                         </li>
                         <li class="navbar_phone_item_type_tectyl">
-                            <a href="#">Dầu rãnh trượt cao cấp WL 68A</a>
+                            <a href="./WL-68A.html">Dầu rãnh trượt cao cấp WL 68A</a>
                         </li>
                     </ul>
-                    <li class="navbar_phone_menu_item_type"
-                        onclick="activeNavbarPhoneMenuItemType('navbar_phone_menu_item_shl', 'SHL')">
-                        <a href="#">SHL <i class="fa-solid fa-arrow-right"></i></a>
+                    <li class="navbar_phone_menu_item_type">
+                        <a href="#">SHL</a>
+                        <i class="fa-solid fa-arrow-right right-arrow"
+                            onclick="activeNavbarPhoneMenuItemType('navbar_phone_menu_item_shl', 'SHL');changeArrowDirection(this);"></i>
                     </li>
                     <ul id="navbar_phone_menu_item_shl">
                         <li class="navbar_phone_item_type_shl">
-                            <a href="#">Dầu nhờn trục quay SPINDLE V10</a>
+                            <a href="./SPINDLE-V10.html">Dầu nhờn trục quay SPINDLE V10</a>
                         </li>
                         <li class="navbar_phone_item_type_shl">
-                            <a href="#">Dầu nhờn trục quay SPINDLE V5</a>
+                            <a href="./SPINDLE-V5.html">Dầu nhờn trục quay SPINDLE V5</a>
                         </li>
                         <li class="navbar_phone_item_type_shl">
-                            <a href="#">Dầu thủy lực công nghiệp SYNTHDRO 32AW</a>
+                            <a href="./SHL-SYNTHDRO-32AW.html">Dầu thủy lực công nghiệp SYNTHDRO 32AW</a>
                         </li>
                         <li class="navbar_phone_item_type_shl">
-                            <a href="#">Dầu nhờn rãnh trượt SYNTHWAY 68M</a>
+                            <a href="./SYNTHWAY-68M.html">Dầu nhờn rãnh trượt SYNTHWAY 68M</a>
                         </li>
                         <li class="navbar_phone_item_type_shl">
-                            <a href="#">Dầu chống rỉ SAMLEX HP 5025V</a>
+                            <a href="./SAMLEX-HP-5025V.html">Dầu chống rỉ SAMLEX HP 5025V</a>
                         </li>
                         <li class="navbar_phone_item_type_shl">
-                            <a href="#">Sáp chống rỉ SAMLEX WAXY 70A</a>
+                            <a href="./SAMLEX-WAXY-70A.html">Sáp chống rỉ SAMLEX WAXY 70A</a>
                         </li>
                     </ul>
+                    <li class="navbar_phone_menu_item_type"><a href="#">MOBIL</a></li>
                     <li class="navbar_phone_menu_item_type"><a href="#">Các loại khác</a></li>
                 </ul>
                 <li class="navbar_phone_item"><a href="#">DỊCH VỤ</a></li>
-                <li class="navbar_phone_item"><a href="#">TIN TỨC</a></li>
-                <li class="navbar_phone_item"><a href="./Contact.html">LIÊN HỆ</a></li>
+                <li class="navbar_phone_item"><a href="./news.html">TIN TỨC</a></li>
+                <li class="navbar_phone_item" style="background-color: rgb(34, 193, 195);"><a href="./Contact.html"
+                        style="color: #f2f2f2;">LIÊN HỆ</a></li>
             </ul>
         </div>
     </nav>
     <main>
-        <div id="contact_img"><img src="./img/contact.png" alt="Contact Us"></div>
+        <div id="contact_img"><img src="./css/img/contact.png" alt="Contact Us"></div>
         <section id="contact_form">
             <form action="/send-email" method="POST" data-aos="fade-right">
                 <h1>BẠN CÓ THẮC MẮC?</h1>
@@ -246,11 +253,10 @@
                 </path>
             </svg>
         </div>
-
     </footer>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-    <script src="./contact.js"></script>
+    <script src="./js/contact.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script>
         AOS.init({
@@ -259,7 +265,7 @@
         });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="./script.js"></script>
+    <script src="./js/script.js"></script>
 
 </body>
 
