--- a/HYDRAULIC-32.html
+++ b/HYDRAULIC-32.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/news.css">
+    <link rel="stylesheet" href="./css/product.css">
     <link rel="icon" href="./css/img/LOGO DKTECH.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
@@ -62,8 +62,7 @@
                 <li class="navbar_pc_item"><a href="#">GIỚI THIỆU</a></li>
                 <li class="navbar_pc_item"><a href="#">DẦU NHỚT CHÍNH HÃNG</a></li>
                 <li class="navbar_pc_item"><a href="#">DỊCH VỤ</a></li>
-                <li class="navbar_pc_item" style="background-color: rgb(0, 102, 255);"><a href="./news.html"
-                        style="color: #f2f2f2;">TIN TỨC</a></li>
+                <li class="navbar_pc_item"><a href="./news.html">TIN TỨC</a></li>
                 <li class="navbar_pc_item"><a href="./Contact.html">LIÊN HỆ</a></li>
             </ul>
         </div>
@@ -78,8 +77,8 @@
                 <li class="navbar_pc_item_type_tectyl">
                     <a href="./RP-361.html">Dầu chống rỉ RP 361</a>
                 </li>
-                <li class="navbar_pc_item_type_tectyl">
-                    <a href="./HYDRAULIC-32.html">Dầu thủy lực công nghiệp HYDRAULIC 32</a>
+                <li class="navbar_pc_item_type_tectyl" style="background-color: rgb(3, 52, 181);">
+                    <a href="./HYDRAULIC-32.html" style="color: #f2f2f2;">Dầu thủy lực công nghiệp HYDRAULIC 32</a>
                 </li>
                 <li class="navbar_pc_item_type_tectyl">
                     <a href="./WL-68A.html">Dầu rãnh trượt cao cấp WL 68A</a>
@@ -126,8 +125,9 @@
                         <li class="navbar_phone_item_type_tectyl">
                             <a href="./RP-361.html">Dầu chống rỉ RP 361</a>
                         </li>
-                        <li class="navbar_phone_item_type_tectyl">
-                            <a href="./HYDRAULIC-32.html">Dầu thủy lực công nghiệp HYDRAULIC 32</a>
+                        <li class="navbar_phone_item_type_tectyl" style="background-color: rgb(34, 193, 195);">
+                            <a href="./HYDRAULIC-32.html" style="color: #f2f2f2;">Dầu thủy lực công nghiệp HYDRAULIC
+                                32</a>
                         </li>
                         <li class="navbar_phone_item_type_tectyl">
                             <a href="./WL-68A.html">Dầu rãnh trượt cao cấp WL 68A</a>
@@ -162,75 +162,170 @@
                     <li class="navbar_phone_menu_item_type"><a href="#">Các loại khác</a></li>
                 </ul>
                 <li class="navbar_phone_item"><a href="#">DỊCH VỤ</a></li>
-                <li class="navbar_phone_item" style="background-color: rgb(34, 193, 195);"><a href="./news.html"
-                        style="color: #f2f2f2;">TIN TỨC</a></li>
+                <li class="navbar_phone_item"><a href="./news.html">TIN TỨC</a></li>
                 <li class="navbar_phone_item"><a href="./Contact.html">LIÊN HỆ</a></li>
             </ul>
         </div>
     </nav>
     <main>
-        <section>
-            <div class="news_information" data-aos="fade-right">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
-                </div>
+        <div class="product_detail">
+            <div class="product_display" data-aos="fade-left">
+                <img class="product_image" src="./css/Oil img/TECTYL HYDRAULIC 32.jpg" alt="Sản phẩm HYDRAULIC 32">
             </div>
-            <div class="news_information" data-aos="fade-left">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
+            <div class="product_info" data-aos="fade-right">
+                <h2 class="product_type">SHL HYDRAULIC 32</h2>
+                <h2 class="product_name">Dầu thủy lực công nghiệp</h2>
+                <p class="product_benefit"><strong>Công dụng:</strong> Dầu thủy lực HYDRAULIC 32 được sử dụng cho các hệ
+                    thống thủy lực công nghiệp, với khả năng bôi trơn tuyệt vời và chống mài mòn hiệu quả. Sản phẩm này
+                    giúp các hệ thống thủy lực hoạt động ổn định, bảo vệ các bộ phận máy móc khỏi sự mài mòn, đồng thời
+                    giúp giảm thiểu chi phí bảo trì và tăng tuổi thọ thiết bị.</p>
+                <div class="volume_options">
+                    <p class="product_volume"><strong>Thể tích:</strong> <span class="current_volume">20L, 200L</span>
+                    </p>
                 </div>
+                <button id="buy_product">
+                    <a href="./Contact.html">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                        <span>Nhận báo giá ngay</span>
+                    </a>
+                </button>
             </div>
-            <div class="news_information" data-aos="fade-right">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
-                </div>
-            </div>
-            <div class="news_information" data-aos="fade-left">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
-                </div>
-            </div>
-        </section>
+        </div>
+        <div class="container">
+            <nav class="table-of-contents" data-aos="fade-up-out">
+                <h2>Mục Lục</h2>
+                <ol>
+                    <li><a href="#overview">Tổng Quan Sản Phẩm</a></li>
+                    <li><a href="#technical-specs">Đặc Tính Kỹ Thuật</a></li>
+                    <li><a href="#applications">Ứng Dụng</a></li>
+                    <li><a href="#benefits">Ưu Điểm</a></li>
+                    <li><a href="#guidelines">Hướng Dẫn Sử Dụng</a></li>
+                    <li><a href="#frequently-asked-questions">Câu Hỏi Thường Gặp</a></li>
+                    <li><a href="#testimonials">Khách Hàng Nói Gì?</a></li>
+                </ol>
+            </nav>
+            <section id="overview" class="product-overview" data-aos="flip-left">
+                <h2>Tổng Quan Sản Phẩm</h2>
+                <p>
+                    **HYDRAULIC 32** là dầu thủy lực chất lượng cao, được thiết kế đặc biệt để sử dụng trong các hệ
+                    thống thủy lực công nghiệp. Dầu có khả năng chống mài mòn tuyệt vời và duy trì hiệu suất ổn định
+                    ngay cả trong điều kiện hoạt động khắc nghiệt. Sản phẩm này không chỉ giúp tăng cường hiệu quả vận
+                    hành mà còn giúp bảo vệ các bộ phận của hệ thống khỏi sự mài mòn, kéo dài tuổi thọ của các thiết bị
+                    và giảm thiểu chi phí bảo trì.
+                </p>
+                <p>
+                    Với đặc tính chống oxy hóa mạnh mẽ, **HYDRAULIC 32** giúp ngăn ngừa sự tích tụ cặn bẩn trong hệ
+                    thống, bảo vệ hiệu quả các bộ phận quan trọng của hệ thống thủy lực.
+                </p>
+            </section>
+            <section id="technical-specs" class="technical-specs" data-aos="zoom-in-left">
+                <h2>Đặc Tính Kỹ Thuật</h2>
+                <ul>
+                    <li><strong>Khả năng chống mài mòn:</strong> Bảo vệ các bộ phận của hệ thống thủy lực khỏi sự mài
+                        mòn, giúp kéo dài tuổi thọ thiết bị.</li>
+                    <li><strong>Cải thiện hiệu suất:</strong> Duy trì hiệu suất hoạt động của hệ thống thủy lực ngay cả
+                        trong điều kiện khắc nghiệt.</li>
+                    <li><strong>Chống oxy hóa:</strong> Ngăn ngừa sự hình thành cặn bẩn, bảo vệ các chi tiết máy móc
+                        khỏi sự oxy hóa.</li>
+                    <li><strong>Độ ổn định nhiệt cao:</strong> Dầu hoạt động ổn định trong dải nhiệt độ rộng, giúp hệ
+                        thống thủy lực không bị gián đoạn.</li>
+                    <li><strong>Độ nhớt:</strong> 32 cSt (ở 40°C), giúp duy trì khả năng bôi trơn tối ưu cho hệ thống.
+                    </li>
+                    <li><strong>Chỉ số độ nhớt (VI):</strong> 95 (theo ASTM D2270), đảm bảo độ ổn định tuyệt vời trong
+                        nhiều điều kiện nhiệt độ khác nhau.</li>
+                    <li><strong>Điểm chớp cháy:</strong> >180°C, giúp đảm bảo an toàn khi sử dụng trong môi trường có
+                        nhiệt độ cao.</li>
+                </ul>
+                <table data-aos="zoom-out">
+                    <thead>
+                        <tr>
+                            <th>Chỉ số</th>
+                            <th>Giá trị</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Khả năng chống mài mòn</td>
+                            <td>Rất tốt</td>
+                        </tr>
+                        <tr>
+                            <td>Chống oxy hóa</td>
+                            <td>Hiệu quả</td>
+                        </tr>
+                        <tr>
+                            <td>Độ ổn định nhiệt</td>
+                            <td>Cao</td>
+                        </tr>
+                        <tr>
+                            <td>Điểm chớp cháy</td>
+                            <td>+180°C</td>
+                        </tr>
+                        <tr>
+                            <td>Độ nhớt (cSt)</td>
+                            <td>32 (ở 40°C)</td>
+                        </tr>
+                        <tr>
+                            <td>Chỉ số độ nhớt (VI)</td>
+                            <td>95</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+            <section id="applications" class="product-applications" data-aos="fade-up-left">
+                <h2>Ứng Dụng</h2>
+                <p>Dầu thủy lực HYDRAULIC 32 được sử dụng trong các hệ thống thủy lực công nghiệp, bao gồm:</p>
+                <ul>
+                    <li>Hệ thống thủy lực trong các máy móc công nghiệp nặng.</li>
+                    <li>Các thiết bị thủy lực trong ngành chế tạo máy.</li>
+                    <li>Ứng dụng trong các máy ép, máy tạo hình, và các thiết bị cần dầu bôi trơn thủy lực.</li>
+                    <li>Sử dụng trong các hệ thống có yêu cầu bảo vệ chống mài mòn và kéo dài tuổi thọ thiết bị.</li>
+                </ul>
+            </section>
+            <section id="benefits" class="product-benefits" data-aos="zoom-in-up">
+                <h2>Ưu Điểm</h2>
+                <p>
+                    Những lợi ích nổi bật của **HYDRAULIC 32** bao gồm:
+                </p>
+                <ul>
+                    <li><strong>Khả năng bảo vệ tuyệt vời:</strong> Dầu có khả năng chống mài mòn và bảo vệ hệ thống
+                        thủy lực khỏi sự hư hỏng.</li>
+                    <li><strong>Độ ổn định cao:</strong> Duy trì hiệu suất hệ thống thủy lực ổn định ngay cả trong điều
+                        kiện làm việc khắc nghiệt.</li>
+                    <li><strong>Tiết kiệm chi phí bảo trì:</strong> Giảm thiểu chi phí bảo trì nhờ vào khả năng bảo vệ
+                        thiết bị và kéo dài tuổi thọ hệ thống thủy lực.</li>
+                    <li><strong>Chống oxy hóa hiệu quả:</strong> Ngăn ngừa sự hình thành cặn bẩn và giữ cho dầu hoạt
+                        động hiệu quả lâu dài.</li>
+                </ul>
+            </section>
+            <section id="guidelines" class="usage-guidelines" data-aos="flip-up">
+                <h2>Hướng Dẫn Sử Dụng</h2>
+                <ol>
+                    <li>Đảm bảo hệ thống thủy lực đã được làm sạch và không có cặn bẩn trước khi đổ dầu vào.</li>
+                    <li>Sử dụng đúng loại dầu theo yêu cầu của hệ thống thủy lực để đảm bảo hiệu suất tốt nhất.</li>
+                    <li>Kiểm tra định kỳ mức dầu và thay dầu khi cần thiết.</li>
+                    <li>Đảm bảo bảo quản dầu ở nơi khô ráo, thoáng mát và tránh ánh sáng trực tiếp.</li>
+                </ol>
+            </section>
+            <section id="frequently-asked-questions" class="faq" data-aos="fade-up-right">
+                <h2>Câu Hỏi Thường Gặp</h2>
+                <dl>
+                    <dt>HYDRAULIC 32 có thể sử dụng cho các hệ thống thủy lực ngoài trời không?</dt>
+                    <dd>Có, tuy nhiên, cần kiểm tra môi trường làm việc và nhiệt độ để đảm bảo dầu hoạt động ổn định.
+                    </dd>
+                    <dt>HYDRAULIC 32 có phải thay dầu định kỳ không?</dt>
+                    <dd>Có, cần thay dầu theo chu kỳ bảo trì của hệ thống thủy lực hoặc theo khuyến nghị của nhà sản
+                        xuất.</dd>
+                </dl>
+            </section>
+            <section id="testimonials" class="customer-reviews" data-aos="zoom-in-left">
+                <h2>Khách Hàng Nói Gì?</h2>
+                <blockquote>
+                    <p>"Sử dụng HYDRAULIC 32 cho hệ thống thủy lực trong nhà máy và thấy hiệu quả rõ rệt. Các máy móc
+                        vận hành êm ái hơn và giảm thiểu sự cố. Đây là một sản phẩm tuyệt vời!" - <strong>Doanh nghiệp
+                            C</strong></p>
+                </blockquote>
+            </section>
+        </div>
     </main>
     <footer>
         <div id="send_email_contact" data-aos="slide-right">
@@ -280,12 +375,11 @@
                 </path>
             </svg>
         </div>
-
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script>
         AOS.init({
-            duration: 800,
+            duration: 1000,
             once: true
         });
     </script>
