--- a/RP-361.html
+++ b/RP-361.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/news.css">
+    <link rel="stylesheet" href="./css/product.css">
     <link rel="icon" href="./css/img/LOGO DKTECH.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
@@ -62,8 +62,7 @@
                 <li class="navbar_pc_item"><a href="#">GIỚI THIỆU</a></li>
                 <li class="navbar_pc_item"><a href="#">DẦU NHỚT CHÍNH HÃNG</a></li>
                 <li class="navbar_pc_item"><a href="#">DỊCH VỤ</a></li>
-                <li class="navbar_pc_item" style="background-color: rgb(0, 102, 255);"><a href="./news.html"
-                        style="color: #f2f2f2;">TIN TỨC</a></li>
+                <li class="navbar_pc_item"><a href="./news.html">TIN TỨC</a></li>
                 <li class="navbar_pc_item"><a href="./Contact.html">LIÊN HỆ</a></li>
             </ul>
         </div>
@@ -75,8 +74,8 @@
                 <li class="navbar_pc_menu_item_type"><a href="#">Các loại khác</a></li>
             </ul>
             <ul id="navbar_pc_menu_item_tectyl">
-                <li class="navbar_pc_item_type_tectyl">
-                    <a href="./RP-361.html">Dầu chống rỉ RP 361</a>
+                <li class="navbar_pc_item_type_tectyl" style="background-color: rgb(3, 52, 181);">
+                    <a href="./RP-361.html" style="color: #f2f2f2;">Dầu chống rỉ RP 361</a>
                 </li>
                 <li class="navbar_pc_item_type_tectyl">
                     <a href="./HYDRAULIC-32.html">Dầu thủy lực công nghiệp HYDRAULIC 32</a>
@@ -123,8 +122,8 @@
                             onclick="activeNavbarPhoneMenuItemType('navbar_phone_menu_item_tectyl', 'Tectyl');changeArrowDirection(this);"></i>
                     </li>
                     <ul id="navbar_phone_menu_item_tectyl">
-                        <li class="navbar_phone_item_type_tectyl">
-                            <a href="./RP-361.html">Dầu chống rỉ RP 361</a>
+                        <li class="navbar_phone_item_type_tectyl" style="background-color: rgb(34, 193, 195);">
+                            <a href="./RP-361.html" style="color: #f2f2f2;">Dầu chống rỉ RP 361</a>
                         </li>
                         <li class="navbar_phone_item_type_tectyl">
                             <a href="./HYDRAULIC-32.html">Dầu thủy lực công nghiệp HYDRAULIC 32</a>
@@ -162,75 +161,148 @@
                     <li class="navbar_phone_menu_item_type"><a href="#">Các loại khác</a></li>
                 </ul>
                 <li class="navbar_phone_item"><a href="#">DỊCH VỤ</a></li>
-                <li class="navbar_phone_item" style="background-color: rgb(34, 193, 195);"><a href="./news.html"
-                        style="color: #f2f2f2;">TIN TỨC</a></li>
+                <li class="navbar_phone_item"><a href="./news.html">TIN TỨC</a></li>
                 <li class="navbar_phone_item"><a href="./Contact.html">LIÊN HỆ</a></li>
             </ul>
         </div>
     </nav>
     <main>
-        <section>
-            <div class="news_information" data-aos="fade-right">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
-                </div>
+        <div class="product_detail">
+            <div class="product_display" data-aos="fade-right">
+                <img class="product_image" src="./css/Oil img/Tectyl RP 361.jpg" alt="Sản phẩm 20L">
             </div>
-            <div class="news_information" data-aos="fade-left">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
+            <div class="product_info" data-aos="fade-left">
+                <h2 class="product_type">TECTYL RP 361</h2>
+                <h2 class="product_name">Dầu chống rỉ</h2>
+                <p class="product_benefit"><strong>Công dụng:</strong>Dầu chống rỉ Tectyl RP 361 được thiết kế để bảo vệ
+                    bề mặt kim loại khỏi sự ăn mòn trong môi trường khắc nghiệt. Sản phẩm này giúp giảm thiểu sự mài mòn
+                    và tăng độ bền của các linh kiện máy móc. Dầu có khả năng chịu được điều kiện nhiệt độ cao và môi
+                    trường ẩm ướt, giúp duy trì hiệu quả bảo vệ lâu dài.</p>
+                <div class="volume_options">
+                    <p class="product_volume"><strong>Thể tích:</strong> <span class="current_volume">20L, 200L</span>
+                    </p>
                 </div>
+                <button id="buy_product">
+                    <a href="./Contact.html">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                        <span>Nhận báo giá ngay</span>
+                    </a>
+                </button>
             </div>
-            <div class="news_information" data-aos="fade-right">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
+        </div>
+        <div class="container">
+            <nav class="table-of-contents" data-aos="fade-up-out">
+                <h2>Mục Lục</h2>
+                <ol>
+                    <li><a href="#overview">Tổng Quan Sản Phẩm</a></li>
+                    <li><a href="#technical-specs">Đặc Tính Kỹ Thuật</a></li>
+                    <li><a href="#applications">Ứng Dụng</a></li>
+                    <li><a href="#benefits">Ưu Điểm</a></li>
+                    <li><a href="#guidelines">Hướng Dẫn Sử Dụng</a></li>
+                    <li><a href="#frequently-asked-questions">Câu Hỏi Thường Gặp</a></li>
+                    <li><a href="#testimonials">Khách Hàng Nói Gì?</a></li>
+                </ol>
+            </nav>
+            <section id="overview" class="product-overview" data-aos="flip-down">
+                <h2>Tổng Quan Sản Phẩm</h2>
+                <p><strong>Tectyl RP 361</strong> là dầu chống rỉ cao cấp được thiết kế để bảo vệ các bộ phận kim loại
+                    khỏi sự ăn mòn trong môi trường có độ ẩm cao. Dầu này thường được sử dụng trong các ngành công
+                    nghiệp chế tạo máy móc và các thiết bị cần bảo vệ bề mặt khỏi sự oxy hóa và mài mòn.</p>
+                <p>Loại dầu này được sản xuất bởi <strong>Tectyl</strong>, thương hiệu nổi tiếng trong ngành công nghiệp
+                    dầu nhớt, đảm bảo chất lượng cao và tính năng bảo vệ tối ưu.</p>
+            </section>
+            <section id="technical-specs" class="technical-specs" data-aos="zoom-in">
+                <h2>Đặc Tính Kỹ Thuật</h2>
+                <ul>
+                    <li><strong>Độ nhớt:</strong> 361 (ISO VG 36) - Cung cấp khả năng bôi trơn tối ưu cho các bộ phận
+                        kim loại.</li>
+                    <li><strong>Khả năng chống rỉ:</strong> Tuyệt vời, bảo vệ bề mặt kim loại khỏi sự ăn mòn và oxy hóa.
+                    </li>
+                    <li><strong>Chống mài mòn:</strong> Dầu giúp giảm thiểu mài mòn và kéo dài tuổi thọ của thiết bị.
+                    </li>
+                    <li><strong>Khả năng chịu nhiệt:</strong> Duy trì tính năng ổn định ngay cả ở nhiệt độ cao.</li>
+                    <li><strong>Chống tạo bọt:</strong> Tectyl RP 361 giúp giảm thiểu tình trạng tạo bọt trong quá trình
+                        sử dụng.</li>
+                </ul>
+                <table data-aos="zoom-out">
+                    <thead>
+                        <tr>
+                            <th>Chỉ số</th>
+                            <th>Giá trị</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Độ nhớt ở 40°C (cSt)</td>
+                            <td>36</td>
+                        </tr>
+                        <tr>
+                            <td>Độ nhớt ở 100°C (cSt)</td>
+                            <td>~5.2</td>
+                        </tr>
+                        <tr>
+                            <td>Chỉ số độ nhớt (VI)</td>
+                            <td>>100</td>
+                        </tr>
+                        <tr>
+                            <td>Điểm đông đặc (°C)</td>
+                            <td>-20°C</td>
+                        </tr>
+                        <tr>
+                            <td>Điểm chớp cháy (°C)</td>
+                            <td>>190°C</td>
+                        </tr>
+                        <tr>
+                            <td>Khả năng chống rỉ</td>
+                            <td>Xuất sắc</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <p>Những đặc tính này giúp dầu Tectyl RP 361 hoạt động hiệu quả trong nhiều điều kiện khắc nghiệt, bảo
+                    vệ các thiết bị của bạn khỏi sự mài mòn và rỉ sét.</p>
+            </section>
+            <section id="applications" class="product-applications" data-aos="fade-right">
+                <h2>Ứng Dụng</h2>
+                <ul>
+                    <li>Bảo vệ các bộ phận kim loại trong môi trường có độ ẩm cao.</li>
+                    <li>Sử dụng trong ngành chế tạo máy, bảo vệ các bộ phận khỏi sự mài mòn và oxy hóa.</li>
+                    <li>Ứng dụng trong các hệ thống có điều kiện hoạt động khắc nghiệt.</li>
+                </ul>
+            </section>
+            <section id="benefits" class="product-benefits" data-aos="fade-left">
+                <h2>Ưu Điểm</h2>
+                <ul>
+                    <li><strong>Bảo vệ tối ưu:</strong> Ngăn ngừa mài mòn và rỉ sét trên các bộ phận kim loại.</li>
+                    <li><strong>Giảm chi phí bảo trì:</strong> Đảm bảo hiệu suất hoạt động ổn định, giúp giảm thiểu sự
+                        cố hỏng hóc.</li>
+                    <li><strong>Khả năng chịu nhiệt và chống rỉ tuyệt vời:</strong> Hoạt động hiệu quả trong mọi điều
+                        kiện môi trường.</li>
+                </ul>
+            </section>
+            <section id="guidelines" class="usage-guidelines" data-aos="zoom-in-down">
+                <h2>Hướng Dẫn Sử Dụng</h2>
+                <ol>
+                    <li>Đảm bảo bề mặt cần bảo vệ sạch và khô trước khi áp dụng dầu Tectyl RP 361.</li>
+                    <li>Không pha trộn với các loại dầu khác.</li>
+                    <li>Đảm bảo không để dầu tiếp xúc trực tiếp với ánh sáng mặt trời.</li>
+                </ol>
+            </section>
+            <section id="frequently-asked-questions" class="faq" data-aos="zoom-in-up">
+                <h2>Câu Hỏi Thường Gặp</h2>
                 <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
+                    <p><strong>Q: Dầu Tectyl RP 361 có thể dùng cho những máy móc nào?</strong></p>
+                    <p>A: Dầu này lý tưởng cho các máy móc cần bảo vệ chống mài mòn, rỉ sét, đặc biệt trong môi trường
+                        ẩm ướt.</p>
                 </div>
-            </div>
-            <div class="news_information" data-aos="fade-left">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
-                </div>
-            </div>
-        </section>
+            </section>
+            <section id="testimonials" class="testimonials" data-aos="zoom-in-right">
+                <h2>Khách Hàng Nói Gì?</h2>
+                <blockquote>
+                    "Tectyl RP 361 giúp giảm thiểu sự mài mòn và bảo vệ các thiết bị của chúng tôi rất hiệu quả." – Công
+                    ty XYZ
+                </blockquote>
+            </section>
+        </div>
     </main>
     <footer>
         <div id="send_email_contact" data-aos="slide-right">
@@ -285,7 +357,7 @@
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script>
         AOS.init({
-            duration: 800,
+            duration: 1000,
             once: true
         });
     </script>
