--- a/SAMLEX-HP-5025V.html
+++ b/SAMLEX-HP-5025V.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/news.css">
+    <link rel="stylesheet" href="./css/product.css">
     <link rel="icon" href="./css/img/LOGO DKTECH.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
@@ -62,8 +62,7 @@
                 <li class="navbar_pc_item"><a href="#">GIỚI THIỆU</a></li>
                 <li class="navbar_pc_item"><a href="#">DẦU NHỚT CHÍNH HÃNG</a></li>
                 <li class="navbar_pc_item"><a href="#">DỊCH VỤ</a></li>
-                <li class="navbar_pc_item" style="background-color: rgb(0, 102, 255);"><a href="./news.html"
-                        style="color: #f2f2f2;">TIN TỨC</a></li>
+                <li class="navbar_pc_item"><a href="./news.html">TIN TỨC</a></li>
                 <li class="navbar_pc_item"><a href="./Contact.html">LIÊN HỆ</a></li>
             </ul>
         </div>
@@ -98,8 +97,8 @@
                 <li class="navbar_pc_item_type_shl">
                     <a href="./SYNTHWAY-68M.html">Dầu nhờn rãnh trượt SYNTHWAY 68M</a>
                 </li>
-                <li class="navbar_pc_item_type_shl">
-                    <a href="./SAMLEX-HP-5025V.html">Dầu chống rỉ SAMLEX HP 5025V</a>
+                <li class="navbar_pc_item_type_shl" style="background-color: rgb(3, 52, 181);">
+                    <a href="./SAMLEX-HP-5025V.html" style="color: #f2f2f2;">Dầu chống rỉ SAMLEX HP 5025V</a>
                 </li>
                 <li class="navbar_pc_item_type_shl">
                     <a href="./SAMLEX-WAXY-70A.html">Sáp chống rỉ SAMLEX WAXY 70A</a>
@@ -151,8 +150,8 @@
                         <li class="navbar_phone_item_type_shl">
                             <a href="./SYNTHWAY-68M.html">Dầu nhờn rãnh trượt SYNTHWAY 68M</a>
                         </li>
-                        <li class="navbar_phone_item_type_shl">
-                            <a href="./SAMLEX-HP-5025V.html">Dầu chống rỉ SAMLEX HP 5025V</a>
+                        <li class="navbar_phone_item_type_shl" style="background-color: rgb(34, 193, 195);">
+                            <a href="./SAMLEX-HP-5025V.html" style="color: #f2f2f2;">Dầu chống rỉ SAMLEX HP 5025V</a>
                         </li>
                         <li class="navbar_phone_item_type_shl">
                             <a href="./SAMLEX-WAXY-70A.html">Sáp chống rỉ SAMLEX WAXY 70A</a>
@@ -162,76 +161,172 @@
                     <li class="navbar_phone_menu_item_type"><a href="#">Các loại khác</a></li>
                 </ul>
                 <li class="navbar_phone_item"><a href="#">DỊCH VỤ</a></li>
-                <li class="navbar_phone_item" style="background-color: rgb(34, 193, 195);"><a href="./news.html"
-                        style="color: #f2f2f2;">TIN TỨC</a></li>
+                <li class="navbar_phone_item"><a href="./news.html">TIN TỨC</a></li>
                 <li class="navbar_phone_item"><a href="./Contact.html">LIÊN HỆ</a></li>
             </ul>
         </div>
     </nav>
     <main>
-        <section>
-            <div class="news_information" data-aos="fade-right">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
-                </div>
+        <div class="product_detail">
+            <div class="product_display" data-aos="fade-left">
+                <img class="product_image" src="./css/Oil img/SHL SAMLEX HP 5025V.jpg" alt="Sản phẩm SAMLEX HP 5025V">
             </div>
-            <div class="news_information" data-aos="fade-left">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
+            <div class="product_info" data-aos="fade-right">
+                <h2 class="product_type">SHL SAMLEX HP 5025V</h2>
+                <h2 class="product_name">Dầu chống rỉ</h2>
+                <p class="product_benefit"><strong>Công dụng:</strong> Dầu chống rỉ SAMLEX HP 5025V được thiết kế để bảo
+                    vệ các bề mặt kim loại khỏi sự ăn mòn và gỉ sét trong môi trường ẩm ướt hoặc có sự thay đổi nhiệt độ
+                    đột ngột. Sản phẩm có khả năng bám dính tuyệt vời, giúp tạo ra một lớp bảo vệ bền vững trên các chi
+                    tiết máy móc, thiết bị công nghiệp. Nó cũng cung cấp khả năng chống ăn mòn lâu dài ngay cả trong
+                    điều kiện môi trường khắc nghiệt nhất.</p>
+                <div class="volume_options">
+                    <p class="product_volume"><strong>Thể tích:</strong> <span class="current_volume">20L, 200L</span>
+                    </p>
                 </div>
+                <button id="buy_product">
+                    <a href="./Contact.html">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                        <span>Nhận báo giá ngay</span>
+                    </a>
+                </button>
             </div>
-            <div class="news_information" data-aos="fade-right">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
+        </div>
+        <div class="container">
+            <nav class="table-of-contents" data-aos="fade-up-out">
+                <h2>Mục Lục</h2>
+                <ol>
+                    <li><a href="#overview">Tổng Quan Sản Phẩm</a></li>
+                    <li><a href="#technical-specs">Đặc Tính Kỹ Thuật</a></li>
+                    <li><a href="#applications">Ứng Dụng</a></li>
+                    <li><a href="#benefits">Ưu Điểm</a></li>
+                    <li><a href="#guidelines">Hướng Dẫn Sử Dụng</a></li>
+                    <li><a href="#frequently-asked-questions">Câu Hỏi Thường Gặp</a></li>
+                    <li><a href="#testimonials">Khách Hàng Nói Gì?</a></li>
+                </ol>
+            </nav>
+            <section id="overview" class="product-overview" data-aos="flip-left">
+                <h2>Tổng Quan Sản Phẩm</h2>
+                <p>
+                    **SAMLEX HP 5025V** là dầu chống rỉ chuyên dụng được thiết kế để bảo vệ các bề mặt kim loại khỏi sự
+                    mài mòn, gỉ sét trong môi trường công nghiệp khắc nghiệt. Sản phẩm này có khả năng bám dính cao và
+                    tạo lớp bảo vệ mạnh mẽ giúp kéo dài tuổi thọ của các thiết bị.
+                </p>
+                <p>
+                    Được sản xuất bởi <strong>SAMLEX</strong>, một thương hiệu nổi tiếng trong ngành công nghiệp dầu
+                    nhớt, SAMLEX HP 5025V đặc biệt hiệu quả trong các ứng dụng yêu cầu bảo vệ chống ăn mòn, nhất là
+                    trong các môi trường có độ ẩm cao.
+                </p>
+            </section>
+            <section id="technical-specs" class="technical-specs" data-aos="zoom-in-left">
+                <h2>Đặc Tính Kỹ Thuật</h2>
+                <ul>
+                    <li><strong>Đặc tính bảo vệ:</strong> Bảo vệ kim loại khỏi sự ăn mòn và gỉ sét trong môi trường khắc
+                        nghiệt.</li>
+                    <li><strong>Khả năng bám dính tuyệt vời:</strong> Tạo lớp bảo vệ bền vững trên các bề mặt kim loại.
+                    </li>
+                    <li><strong>Chống ăn mòn:</strong> Duy trì khả năng bảo vệ ngay cả trong điều kiện nhiệt độ thay đổi
+                        đột ngột và độ ẩm cao.</li>
+                    <li><strong>Ứng dụng rộng rãi:</strong> Phù hợp với nhiều loại thiết bị và công cụ công nghiệp.</li>
+                </ul>
+                <table data-aos="zoom-out">
+                    <thead>
+                        <tr>
+                            <th>Chỉ số</th>
+                            <th>Giá trị</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Ngoại quan</td>
+                            <td>Màu nâu</td>
+                        </tr>
+                        <tr>
+                            <td>Độ nhớt ở 40°C (cSt)</td>
+                            <td>~25</td>
+                        </tr>
+                        <tr>
+                            <td>Chỉ số độ nhớt (VI)</td>
+                            <td>>100</td>
+                        </tr>
+                        <tr>
+                            <td>Khả năng chống gỉ sét</td>
+                            <td>Xuất sắc</td>
+                        </tr>
+                        <tr>
+                            <td>Chống tạo bọt</td>
+                            <td>Tốt</td>
+                        </tr>
+                        <tr>
+                            <td>Điểm chớp cháy (°C)</td>
+                            <td>+150°C</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <p>
+                    Các chỉ số này cho thấy SAMLEX HP 5025V cung cấp khả năng bảo vệ bề mặt kim loại tốt nhất trong
+                    nhiều điều kiện làm việc khác nhau, giúp giảm thiểu chi phí bảo trì và kéo dài tuổi thọ thiết bị.
+                </p>
+            </section>
+            <section id="applications" class="product-applications" data-aos="fade-up-left">
+                <h2>Ứng Dụng</h2>
+                <p>Dầu chống rỉ SAMLEX HP 5025V có thể được sử dụng trong nhiều ứng dụng công nghiệp:</p>
+                <ul>
+                    <li>Bảo vệ các chi tiết máy móc khỏi sự ăn mòn trong điều kiện môi trường ẩm ướt.</li>
+                    <li>Ứng dụng trong các hệ thống lưu trữ, thiết bị gia công kim loại, và các chi tiết máy móc khác.
+                    </li>
+                    <li>Thiết bị cần bảo vệ khỏi sự ăn mòn trong môi trường có độ ẩm cao hoặc nhiệt độ biến đổi nhanh.
+                    </li>
+                </ul>
+            </section>
+            <section id="benefits" class="product-benefits" data-aos="zoom-in-up">
+                <h2>Ưu Điểm</h2>
+                <p>
+                    Lý do bạn nên chọn SAMLEX HP 5025V cho các nhu cầu bảo vệ bề mặt kim loại:
+                </p>
+                <ul>
+                    <li><strong>Bảo vệ vượt trội:</strong> Giúp bảo vệ các bề mặt kim loại khỏi sự ăn mòn và gỉ sét.
+                    </li>
+                    <li><strong>Kéo dài tuổi thọ thiết bị:</strong> Dầu bảo vệ các bộ phận kim loại, giúp giảm thiểu chi
+                        phí bảo trì.</li>
+                    <li><strong>Ứng dụng rộng rãi:</strong> Sử dụng được trong nhiều loại thiết bị và môi trường công
+                        nghiệp khác nhau.</li>
+                    <li><strong>Tiết kiệm chi phí:</strong> Giảm tần suất thay dầu và bảo trì nhờ khả năng bảo vệ lâu
+                        dài.</li>
+                </ul>
+            </section>
+            <section id="guidelines" class="usage-guidelines" data-aos="flip-up">
+                <h2>Hướng Dẫn Sử Dụng</h2>
+                <ol>
+                    <li>Đảm bảo bề mặt cần bảo vệ sạch sẽ trước khi sử dụng SAMLEX HP 5025V.</li>
+                    <li>Không trộn dầu với các loại dầu khác.</li>
+                    <li>Kiểm tra định kỳ các thiết bị và thêm dầu khi cần thiết.</li>
+                    <li>Đảm bảo bảo quản dầu ở nơi khô ráo, thoáng mát và tránh ánh nắng trực tiếp.</li>
+                </ol>
+            </section>
+            <section id="frequently-asked-questions" class="faq" data-aos="zoom-in-down">
+                <h2>Câu Hỏi Thường Gặp</h2>
                 <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
+                    <p><strong>Q: SAMLEX HP 5025V có thể dùng cho những loại máy nào?</strong></p>
+                    <p>A: SAMLEX HP 5025V là lựa chọn lý tưởng cho các máy móc công nghiệp, thiết bị gia công kim loại,
+                        và các hệ thống cần bảo vệ chống ăn mòn trong môi trường ẩm ướt.</p>
                 </div>
-            </div>
-            <div class="news_information" data-aos="fade-left">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
                 <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
+                    <p><strong>Q: Dầu này có thể sử dụng trong môi trường nhiệt độ cao không?</strong></p>
+                    <p>A: SAMLEX HP 5025V có thể hoạt động hiệu quả trong môi trường có nhiệt độ cao, với điểm chớp cháy
+                        lên đến 150°C.</p>
                 </div>
-            </div>
-        </section>
+            </section>
+            <section id="testimonials" class="testimonials" data-aos="flip-left">
+                <h2>Khách Hàng Nói Gì?</h2>
+                <blockquote>
+                    <p>"SAMLEX HP 5025V đã giúp chúng tôi bảo vệ các thiết bị công nghiệp khỏi sự ăn mòn hiệu quả, giúp
+                        giảm chi phí bảo trì và tăng tuổi thọ thiết bị. Đây là lựa chọn tuyệt vời cho mọi doanh nghiệp."
+                        - <strong>Doanh nghiệp A</strong></p>
+                </blockquote>
+            </section>
+        </div>
     </main>
+
     <footer>
         <div id="send_email_contact" data-aos="slide-right">
             <h2>Theo Dõi Ưu Đãi</h2>
@@ -280,12 +375,11 @@
                 </path>
             </svg>
         </div>
-
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script>
         AOS.init({
-            duration: 800,
+            duration: 1000,
             once: true
         });
     </script>
