--- a/SAMLEX-WAXY-70A.html
+++ b/SAMLEX-WAXY-70A.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/news.css">
+    <link rel="stylesheet" href="./css/product.css">
     <link rel="icon" href="./css/img/LOGO DKTECH.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
@@ -62,8 +62,7 @@
                 <li class="navbar_pc_item"><a href="#">GIỚI THIỆU</a></li>
                 <li class="navbar_pc_item"><a href="#">DẦU NHỚT CHÍNH HÃNG</a></li>
                 <li class="navbar_pc_item"><a href="#">DỊCH VỤ</a></li>
-                <li class="navbar_pc_item" style="background-color: rgb(0, 102, 255);"><a href="./news.html"
-                        style="color: #f2f2f2;">TIN TỨC</a></li>
+                <li class="navbar_pc_item"><a href="./news.html">TIN TỨC</a></li>
                 <li class="navbar_pc_item"><a href="./Contact.html">LIÊN HỆ</a></li>
             </ul>
         </div>
@@ -101,8 +100,8 @@
                 <li class="navbar_pc_item_type_shl">
                     <a href="./SAMLEX-HP-5025V.html">Dầu chống rỉ SAMLEX HP 5025V</a>
                 </li>
-                <li class="navbar_pc_item_type_shl">
-                    <a href="./SAMLEX-WAXY-70A.html">Sáp chống rỉ SAMLEX WAXY 70A</a>
+                <li class="navbar_pc_item_type_shl" style="background-color: rgb(3, 52, 181);">
+                    <a href="./SAMLEX-WAXY-70A.html" style="color: #f2f2f2;">Sáp chống rỉ SAMLEX WAXY 70A</a>
                 </li>
             </ul>
         </div>
@@ -154,84 +153,167 @@
                         <li class="navbar_phone_item_type_shl">
                             <a href="./SAMLEX-HP-5025V.html">Dầu chống rỉ SAMLEX HP 5025V</a>
                         </li>
-                        <li class="navbar_phone_item_type_shl">
-                            <a href="./SAMLEX-WAXY-70A.html">Sáp chống rỉ SAMLEX WAXY 70A</a>
+                        <li class="navbar_phone_item_type_shl" style="background-color: rgb(34, 193, 195);">
+                            <a href="./SAMLEX-WAXY-70A.html" style="color: #f2f2f2;">Sáp chống rỉ SAMLEX WAXY 70A</a>
                         </li>
                     </ul>
                     <li class="navbar_phone_menu_item_type"><a href="#">MOBIL</a></li>
                     <li class="navbar_phone_menu_item_type"><a href="#">Các loại khác</a></li>
                 </ul>
                 <li class="navbar_phone_item"><a href="#">DỊCH VỤ</a></li>
-                <li class="navbar_phone_item" style="background-color: rgb(34, 193, 195);"><a href="./news.html"
-                        style="color: #f2f2f2;">TIN TỨC</a></li>
+                <li class="navbar_phone_item"><a href="./news.html">TIN TỨC</a></li>
                 <li class="navbar_phone_item"><a href="./Contact.html">LIÊN HỆ</a></li>
             </ul>
         </div>
     </nav>
     <main>
-        <section>
-            <div class="news_information" data-aos="fade-right">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
-                </div>
+        <div class="product_detail">
+            <div class="product_display" data-aos="fade-left">
+                <img class="product_image" src="./css/Oil img/SHL SAMLEX WAXY 70A.jpg" alt="Sản phẩm SAMLEX WAXY 70A">
             </div>
-            <div class="news_information" data-aos="fade-left">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
+            <div class="product_info" data-aos="fade-right">
+                <h2 class="product_type">SHL SAMLEX WAXY 70A</h2>
+                <h2 class="product_name">Sáp chống rỉ</h2>
+                <p class="product_benefit"><strong>Công dụng:</strong> Sáp chống rỉ SAMLEX WAXY 70A là một sản phẩm bảo
+                    vệ kim loại khỏi sự ăn mòn trong môi trường ẩm ướt hoặc khi tiếp xúc với các tác nhân gây oxi hóa.
+                    Sản phẩm này không chỉ tạo ra lớp bảo vệ mạnh mẽ mà còn giữ cho các chi tiết máy móc luôn sạch sẽ,
+                    dễ dàng bảo trì và bảo vệ lâu dài khỏi các yếu tố gây hại.</p>
+                <div class="volume_options">
+                    <p class="product_volume"><strong>Thể tích:</strong> <span class="current_volume">20L, 200L</span>
+                    </p>
                 </div>
+                <button id="buy_product">
+                    <a href="./Contact.html">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                        <span>Nhận báo giá ngay</span>
+                    </a>
+                </button>
             </div>
-            <div class="news_information" data-aos="fade-right">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
+        </div>
+        <div class="container">
+            <nav class="table-of-contents" data-aos="fade-up-out">
+                <h2>Mục Lục</h2>
+                <ol>
+                    <li><a href="#overview">Tổng Quan Sản Phẩm</a></li>
+                    <li><a href="#technical-specs">Đặc Tính Kỹ Thuật</a></li>
+                    <li><a href="#applications">Ứng Dụng</a></li>
+                    <li><a href="#benefits">Ưu Điểm</a></li>
+                    <li><a href="#guidelines">Hướng Dẫn Sử Dụng</a></li>
+                    <li><a href="#frequently-asked-questions">Câu Hỏi Thường Gặp</a></li>
+                    <li><a href="#testimonials">Khách Hàng Nói Gì?</a></li>
+                </ol>
+            </nav>
+            <section id="overview" class="product-overview" data-aos="flip-left">
+                <h2>Tổng Quan Sản Phẩm</h2>
+                <p>
+                    **SAMLEX WAXY 70A** là sáp chống rỉ chuyên dụng dành cho các ứng dụng bảo vệ các bề mặt kim loại
+                    khỏi sự ăn mòn và gỉ sét trong điều kiện môi trường khắc nghiệt. Sản phẩm tạo ra một lớp phủ sáp bảo
+                    vệ lâu dài, giúp giảm thiểu chi phí bảo trì và kéo dài tuổi thọ của các thiết bị công nghiệp.
+                </p>
+                <p>
+                    Với khả năng bám dính tốt, SAMLEX WAXY 70A có thể dễ dàng áp dụng lên các chi tiết máy móc và thiết
+                    bị trong môi trường có độ ẩm cao hoặc môi trường chịu tác động của các yếu tố ăn mòn.
+                </p>
+            </section>
+            <section id="technical-specs" class="technical-specs" data-aos="zoom-in-left">
+                <h2>Đặc Tính Kỹ Thuật</h2>
+                <ul>
+                    <li><strong>Khả năng chống rỉ sét:</strong> Tạo lớp bảo vệ mạnh mẽ chống lại sự ăn mòn và gỉ sét.
+                    </li>
+                    <li><strong>Đặc tính bám dính:</strong> Lớp bảo vệ sáp bám dính chặt lên các bề mặt kim loại.</li>
+                    <li><strong>Dễ dàng bảo trì:</strong> Giúp giảm chi phí bảo trì và kéo dài tuổi thọ của thiết bị.
+                    </li>
+                    <li><strong>Chống tác động của các yếu tố môi trường:</strong> Sử dụng trong các điều kiện môi
+                        trường có độ ẩm cao hoặc tiếp xúc với các tác nhân gây oxi hóa.</li>
+                </ul>
+                <table data-aos="zoom-out">
+                    <thead>
+                        <tr>
+                            <th>Chỉ số</th>
+                            <th>Giá trị</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Đặc tính bảo vệ</td>
+                            <td>Chống gỉ sét hiệu quả</td>
+                        </tr>
+                        <tr>
+                            <td>Khả năng bám dính</td>
+                            <td>Rất tốt</td>
+                        </tr>
+                        <tr>
+                            <td>Chống oxy hóa</td>
+                            <td>Tốt</td>
+                        </tr>
+                        <tr>
+                            <td>Điểm chớp cháy</td>
+                            <td>+160°C</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+            <section id="applications" class="product-applications" data-aos="fade-up-left">
+                <h2>Ứng Dụng</h2>
+                <p>Sáp chống rỉ SAMLEX WAXY 70A thích hợp cho các ứng dụng bảo vệ các chi tiết máy và thiết bị trong các
+                    môi trường công nghiệp khắc nghiệt:</p>
+                <ul>
+                    <li>Bảo vệ các bề mặt kim loại khỏi sự ăn mòn, gỉ sét trong điều kiện môi trường ẩm ướt hoặc tiếp
+                        xúc với các tác nhân gây oxi hóa.</li>
+                    <li>Ứng dụng trong ngành sản xuất và bảo trì các thiết bị công nghiệp, đặc biệt là các máy móc cần
+                        bảo vệ khỏi sự tác động của độ ẩm cao và sự ăn mòn.</li>
+                    <li>Sử dụng trong các ngành như chế tạo máy, công nghiệp nặng, và các ngành yêu cầu bảo vệ kim loại
+                        khỏi các yếu tố môi trường khắc nghiệt.</li>
+                </ul>
+            </section>
+            <section id="benefits" class="product-benefits" data-aos="zoom-in-up">
+                <h2>Ưu Điểm</h2>
+                <p>
+                    Các lý do bạn nên chọn **SAMLEX WAXY 70A** cho các ứng dụng bảo vệ bề mặt kim loại:
+                </p>
+                <ul>
+                    <li><strong>Bảo vệ hiệu quả:</strong> Tạo lớp phủ bảo vệ chống lại sự ăn mòn và gỉ sét.</li>
+                    <li><strong>Kéo dài tuổi thọ thiết bị:</strong> Giảm chi phí bảo trì và bảo vệ các thiết bị khỏi sự
+                        xuống cấp do tác động của môi trường.</li>
+                    <li><strong>Chống oxy hóa:</strong> Bảo vệ thiết bị khỏi sự tác động của oxy và các yếu tố ăn mòn
+                        khác.</li>
+                    <li><strong>Tiết kiệm chi phí:</strong> Giảm thiểu việc thay thế thiết bị và các chi phí liên quan
+                        đến bảo trì, sửa chữa.</li>
+                </ul>
+            </section>
+            <section id="guidelines" class="usage-guidelines" data-aos="flip-up">
+                <h2>Hướng Dẫn Sử Dụng</h2>
+                <ol>
+                    <li>Đảm bảo bề mặt cần bảo vệ sạch và khô ráo trước khi áp dụng SAMLEX WAXY 70A.</li>
+                    <li>Sử dụng lớp sáp mỏng và đều lên bề mặt cần bảo vệ.</li>
+                    <li>Đảm bảo bảo quản sản phẩm ở nơi khô ráo và tránh ánh nắng trực tiếp.</li>
+                    <li>Kiểm tra định kỳ và thay lớp bảo vệ khi cần thiết.</li>
+                </ol>
+            </section>
+            <section id="frequently-asked-questions" class="faq" data-aos="zoom-in-down">
+                <h2>Câu Hỏi Thường Gặp</h2>
                 <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
+                    <p><strong>Q: Sáp chống rỉ SAMLEX WAXY 70A có thể sử dụng cho những loại thiết bị nào?</strong></p>
+                    <p>A: SAMLEX WAXY 70A thích hợp sử dụng cho các thiết bị công nghiệp, máy móc và các bề mặt kim loại
+                        cần bảo vệ khỏi sự ăn mòn trong môi trường ẩm ướt hoặc các môi trường khắc nghiệt.</p>
                 </div>
-            </div>
-            <div class="news_information" data-aos="fade-left">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
                 <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
+                    <p><strong>Q: Sáp có khả năng chống oxy hóa không?</strong></p>
+                    <p>A: Có, SAMLEX WAXY 70A có khả năng bảo vệ các bề mặt kim loại khỏi sự tác động của oxy và các yếu
+                        tố ăn mòn khác.</p>
                 </div>
-            </div>
-        </section>
+            </section>
+            <section id="testimonials" class="testimonials" data-aos="flip-left">
+                <h2>Khách Hàng Nói Gì?</h2>
+                <blockquote>
+                    <p>"Chúng tôi đã sử dụng SAMLEX WAXY 70A để bảo vệ các bề mặt kim loại trong các thiết bị công
+                        nghiệp, và hiệu quả rất rõ rệt. Sản phẩm giúp giảm thiểu chi phí bảo trì và tăng tuổi thọ thiết
+                        bị." - <strong>Doanh nghiệp B</strong></p>
+                </blockquote>
+            </section>
+        </div>
     </main>
+
     <footer>
         <div id="send_email_contact" data-aos="slide-right">
             <h2>Theo Dõi Ưu Đãi</h2>
@@ -280,12 +362,11 @@
                 </path>
             </svg>
         </div>
-
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script>
         AOS.init({
-            duration: 800,
+            duration: 1000,
             once: true
         });
     </script>
