--- a/SPINDLE-V5.html
+++ b/SPINDLE-V5.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/news.css">
+    <link rel="stylesheet" href="./css/product.css">
     <link rel="icon" href="./css/img/LOGO DKTECH.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
@@ -62,8 +62,7 @@
                 <li class="navbar_pc_item"><a href="#">GIỚI THIỆU</a></li>
                 <li class="navbar_pc_item"><a href="#">DẦU NHỚT CHÍNH HÃNG</a></li>
                 <li class="navbar_pc_item"><a href="#">DỊCH VỤ</a></li>
-                <li class="navbar_pc_item" style="background-color: rgb(0, 102, 255);"><a href="./news.html"
-                        style="color: #f2f2f2;">TIN TỨC</a></li>
+                <li class="navbar_pc_item"><a href="./news.html">TIN TỨC</a></li>
                 <li class="navbar_pc_item"><a href="./Contact.html">LIÊN HỆ</a></li>
             </ul>
         </div>
@@ -89,8 +88,8 @@
                 <li class="navbar_pc_item_type_shl">
                     <a href="./SPINDLE-V10.html">Dầu nhờn trục quay SPINDLE V10</a>
                 </li>
-                <li class="navbar_pc_item_type_shl">
-                    <a href="./SPINDLE-V5.html">Dầu nhờn trục quay SPINDLE V5</a>
+                <li class="navbar_pc_item_type_shl" style="background-color: rgb(3, 52, 181);">
+                    <a href="./SPINDLE-V5.html" style="color: #f2f2f2;">Dầu nhờn trục quay SPINDLE V5</a>
                 </li>
                 <li class="navbar_pc_item_type_shl">
                     <a href="./SHL-SYNTHDRO-32AW.html">Dầu thủy lực công nghiệp SYNTHDRO 32AW</a>
@@ -142,8 +141,8 @@
                         <li class="navbar_phone_item_type_shl">
                             <a href="./SPINDLE-V10.html">Dầu nhờn trục quay SPINDLE V10</a>
                         </li>
-                        <li class="navbar_phone_item_type_shl">
-                            <a href="./SPINDLE-V5.html">Dầu nhờn trục quay SPINDLE V5</a>
+                        <li class="navbar_phone_item_type_shl" style="background-color: rgb(34, 193, 195);">
+                            <a href="./SPINDLE-V5.html" style="color: #f2f2f2;">Dầu nhờn trục quay SPINDLE V5</a>
                         </li>
                         <li class="navbar_phone_item_type_shl">
                             <a href="./SHL-SYNTHDRO-32AW.html">Dầu thủy lực công nghiệp SYNTHDRO 32AW</a>
@@ -162,75 +161,196 @@
                     <li class="navbar_phone_menu_item_type"><a href="#">Các loại khác</a></li>
                 </ul>
                 <li class="navbar_phone_item"><a href="#">DỊCH VỤ</a></li>
-                <li class="navbar_phone_item" style="background-color: rgb(34, 193, 195);"><a href="./news.html"
-                        style="color: #f2f2f2;">TIN TỨC</a></li>
+                <li class="navbar_phone_item"><a href="./news.html">TIN TỨC</a></li>
                 <li class="navbar_phone_item"><a href="./Contact.html">LIÊN HỆ</a></li>
             </ul>
         </div>
     </nav>
     <main>
-        <section>
-            <div class="news_information" data-aos="fade-right">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
-                </div>
+        <div class="product_detail">
+            <div class="product_display" data-aos="fade-right">
+                <img class="product_image" src="./css/Oil img/SHL SPINDLE V5.jpg" alt="Sản phẩm 20L">
             </div>
-            <div class="news_information" data-aos="fade-left">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
+            <div class="product_info" data-aos="fade-left">
+                <h2 class="product_type">SHL SPINDLE V5</h2>
+                <h2 class="product_name">Dầu nhờn trục quay</h2>
+                <p class="product_benefit"><strong>Công dụng:</strong>Dầu nhờn trục quay SHL SPINDLE V5 được phát triển
+                    đặc biệt
+                    cho các máy công cụ yêu cầu độ chính xác cao và khả năng chống mài mòn vượt trội. Sản phẩm này giúp
+                    giảm thiểu ma sát và nhiệt độ, tăng tuổi thọ của trục quay và các bộ phận máy. Được chế tạo từ dầu
+                    gốc
+                    chất lượng cao và các phụ gia chống mài mòn, dầu SHL SPINDLE V5 giúp duy trì hiệu suất ổn định, bôi
+                    trơn
+                    tối ưu và giảm thiểu hiện tượng mài mòn cho các máy công cụ.</p>
+                <div class="volume_options">
+                    <p class="product_volume"><strong>Thể tích:</strong> <span class="current_volume">20L, 200L</span>
+                    </p>
                 </div>
+                <button id="buy_product">
+                    <a href="./Contact.html">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                        <span>Nhận báo giá ngay</span>
+                    </a>
+                </button>
             </div>
-            <div class="news_information" data-aos="fade-right">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
+        </div>
+        <div class="container">
+            <nav class="table-of-contents" data-aos="fade-up-out">
+                <h2>Mục Lục</h2>
+                <ol>
+                    <li><a href="#overview">Tổng Quan Sản Phẩm</a></li>
+                    <li><a href="#technical-specs">Đặc Tính Kỹ Thuật</a></li>
+                    <li><a href="#applications">Ứng Dụng</a></li>
+                    <li><a href="#benefits">Ưu Điểm</a></li>
+                    <li><a href="#guidelines">Hướng Dẫn Sử Dụng</a></li>
+                    <li><a href="#frequently-asked-questions">Câu Hỏi Thường Gặp</a></li>
+                    <li><a href="#testimonials">Khách Hàng Nói Gì?</a></li>
+                </ol>
+            </nav>
+            <section id="overview" class="product-overview" data-aos="flip-down">
+                <h2>Tổng Quan Sản Phẩm</h2>
+                <p>
+                    **SHL SPINDLE V5** là dầu nhờn đặc biệt cho trục quay, được thiết kế để hoạt động hiệu quả trong các
+                    điều kiện khắc nghiệt, nơi yêu cầu bôi trơn tối ưu và khả năng chống mài mòn vượt trội. Dầu giúp bảo
+                    vệ
+                    các bộ phận máy công cụ khỏi sự mài mòn và hư hỏng, đảm bảo tuổi thọ lâu dài của thiết bị.
+                </p>
+                <p>
+                    Sản phẩm này được sản xuất bởi <strong>SHL Lubricants</strong>, thương hiệu nổi tiếng từ Hàn Quốc,
+                    mang đến
+                    giải pháp tối ưu cho ngành công nghiệp chế tạo máy và gia công kim loại.
+                </p>
+            </section>
+            <section id="technical-specs" class="technical-specs" data-aos="zoom-in">
+                <h2>Đặc Tính Kỹ Thuật</h2>
+                <ul>
+                    <li><strong>Độ nhớt:</strong> ISO VG 68 - Đảm bảo khả năng bôi trơn và giảm ma sát tối ưu cho trục
+                        quay.</li>
+                    <li><strong>Khả năng chống mài mòn:</strong> Cung cấp khả năng chống mài mòn tuyệt vời, bảo vệ các
+                        bộ phận
+                        của trục quay khỏi sự mài mòn do ma sát.
+                    </li>
+                    <li><strong>Khả năng chống oxy hóa:</strong> Giảm thiểu sự hình thành cặn bẩn, bảo vệ hệ thống khỏi
+                        sự phân hủy
+                        dầu.
+                    </li>
+                    <li><strong>Khả năng bôi trơn tuyệt vời:</strong> Dầu có khả năng bôi trơn hoàn hảo, giữ cho trục
+                        quay hoạt động
+                        êm ái và hiệu quả.
+                    </li>
+                    <li><strong>Ổn định nhiệt:</strong> Duy trì tính năng bôi trơn hiệu quả ngay cả trong môi trường
+                        nhiệt độ cao.</li>
+                </ul>
+                <table data-aos="zoom-out">
+                    <thead>
+                        <tr>
+                            <th>Chỉ số</th>
+                            <th>Giá trị</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Độ nhớt ở 40°C (cSt)</td>
+                            <td>68</td>
+                        </tr>
+                        <tr>
+                            <td>Độ nhớt ở 100°C (cSt)</td>
+                            <td>~8.0</td>
+                        </tr>
+                        <tr>
+                            <td>Chỉ số độ nhớt (VI)</td>
+                            <td>>100</td>
+                        </tr>
+                        <tr>
+                            <td>Điểm đông đặc (°C)</td>
+                            <td>-20°C</td>
+                        </tr>
+                        <tr>
+                            <td>Điểm chớp cháy (°C)</td>
+                            <td>>200°C</td>
+                        </tr>
+                        <tr>
+                            <td>Khả năng tách nước</td>
+                            <td>Tốt</td>
+                        </tr>
+                        <tr>
+                            <td>Chống tạo bọt</td>
+                            <td>Tốt</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+            <section id="applications" class="product-applications" data-aos="fade-right">
+                <h2>Ứng Dụng</h2>
+                <p>Dầu nhờn trục quay SHL SPINDLE V5 được sử dụng trong các máy công cụ yêu cầu bôi trơn hiệu quả:</p>
+                <ul>
+                    <li>Máy gia công chính xác và máy tiện CNC.</li>
+                    <li>Máy gia công trục quay tốc độ cao và máy mài.</li>
+                    <li>Hệ thống máy công cụ yêu cầu dầu nhờn có khả năng chống mài mòn cao.</li>
+                    <li>Thiết bị yêu cầu dầu ổn định ở nhiệt độ cao và khả năng bôi trơn tối ưu trong quá trình vận
+                        hành.</li>
+                </ul>
+            </section>
+            <section id="benefits" class="product-benefits" data-aos="fade-left">
+                <h2>Ưu Điểm</h2>
+                <p>SHL SPINDLE V5 đem đến những lợi ích vượt trội:</p>
+                <ul>
+                    <li><strong>Giảm thiểu ma sát và nhiệt độ:</strong> Dầu giúp giảm ma sát và nhiệt độ trong các bộ
+                        phận máy
+                        công cụ, kéo dài tuổi thọ thiết bị.
+                    </li>
+                    <li><strong>Chống mài mòn và oxy hóa:</strong> Bảo vệ các bộ phận kim loại khỏi mài mòn và quá trình
+                        oxy hóa,
+                        giảm chi phí bảo trì.
+                    </li>
+                    <li><strong>Ổn định trong điều kiện khắc nghiệt:</strong> Dầu hoạt động hiệu quả ngay cả trong môi
+                        trường nhiệt
+                        độ cao và có khả năng tách nước tốt.
+                    </li>
+                    <li><strong>Tiết kiệm chi phí bảo trì:</strong> Giảm thiểu tần suất thay dầu và sửa chữa, giúp tiết
+                        kiệm chi
+                        phí vận hành.
+                    </li>
+                </ul>
+            </section>
+            <section id="guidelines" class="usage-guidelines" data-aos="zoom-in-down">
+                <h2>Hướng Dẫn Sử Dụng</h2>
+                <ol>
+                    <li>Đảm bảo hệ thống trục quay sạch sẽ và không có tạp chất trước khi thay dầu.</li>
+                    <li>Không pha trộn với bất kỳ loại dầu nào khác để giữ tính năng của sản phẩm.</li>
+                    <li>Kiểm tra định kỳ và thay dầu theo yêu cầu của nhà sản xuất thiết bị.</li>
+                    <li>Đảm bảo dầu được bảo quản ở nơi khô ráo, tránh ánh nắng mặt trời trực tiếp.</li>
+                </ol>
+            </section>
+            <section id="frequently-asked-questions" class="faq" data-aos="flip-up">
+                <h2>Câu Hỏi Thường Gặp</h2>
+                <ul>
+                    <li><strong>Làm thế nào để bảo quản dầu SHL SPINDLE V5?</strong>
+                        <p>Bảo quản dầu trong môi trường khô ráo, tránh ánh nắng mặt trời và nhiệt độ cao.</p>
+                    </li>
+                    <li><strong>Thời gian thay dầu bao lâu?</strong>
+                        <p>Thời gian thay dầu phụ thuộc vào điều kiện hoạt động của máy móc, thường khoảng 6-12 tháng.
+                        </p>
+                    </li>
+                    <li><strong>Dầu có thể sử dụng cho máy CNC khác không?</strong>
+                        <p>Có, dầu có thể được sử dụng cho hầu hết các loại máy CNC yêu cầu dầu nhờn trục quay.</p>
+                    </li>
+                </ul>
+            </section>
+            <section id="testimonials" class="customer-reviews" data-aos="flip-left">
+                <h2>Khách Hàng Nói Gì?</h2>
+                <div class="testimonial">
+                    <p><strong>Mr. Minh</strong>: "Dầu SHL SPINDLE V5 giúp máy móc của chúng tôi hoạt động êm ái và ổn
+                        định,
+                        giảm thiểu hư hỏng do ma sát." </p>
                 </div>
-            </div>
-            <div class="news_information" data-aos="fade-left">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
+                <div class="testimonial">
+                    <p><strong>Ms. Mai</strong>: "Chúng tôi đã sử dụng sản phẩm này trong nhiều năm và luôn cảm thấy hài
+                        lòng
+                        với chất lượng cũng như hiệu quả của dầu." </p>
                 </div>
-            </div>
-        </section>
+            </section>
+        </div>
     </main>
     <footer>
         <div id="send_email_contact" data-aos="slide-right">
@@ -280,12 +400,11 @@
                 </path>
             </svg>
         </div>
-
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script>
         AOS.init({
-            duration: 800,
+            duration: 1000,
             once: true
         });
     </script>
