--- a/SYNTHWAY-68M.html
+++ b/SYNTHWAY-68M.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/news.css">
+    <link rel="stylesheet" href="./css/product.css">
     <link rel="icon" href="./css/img/LOGO DKTECH.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
@@ -62,8 +62,7 @@
                 <li class="navbar_pc_item"><a href="#">GIỚI THIỆU</a></li>
                 <li class="navbar_pc_item"><a href="#">DẦU NHỚT CHÍNH HÃNG</a></li>
                 <li class="navbar_pc_item"><a href="#">DỊCH VỤ</a></li>
-                <li class="navbar_pc_item" style="background-color: rgb(0, 102, 255);"><a href="./news.html"
-                        style="color: #f2f2f2;">TIN TỨC</a></li>
+                <li class="navbar_pc_item"><a href="./news.html">TIN TỨC</a></li>
                 <li class="navbar_pc_item"><a href="./Contact.html">LIÊN HỆ</a></li>
             </ul>
         </div>
@@ -95,8 +94,8 @@
                 <li class="navbar_pc_item_type_shl">
                     <a href="./SHL-SYNTHDRO-32AW.html">Dầu thủy lực công nghiệp SYNTHDRO 32AW</a>
                 </li>
-                <li class="navbar_pc_item_type_shl">
-                    <a href="./SYNTHWAY-68M.html">Dầu nhờn rãnh trượt SYNTHWAY 68M</a>
+                <li class="navbar_pc_item_type_shl" style="background-color: rgb(3, 52, 181);">
+                    <a href="./SYNTHWAY-68M.html" style="color: #f2f2f2;">Dầu nhờn rãnh trượt SYNTHWAY 68M</a>
                 </li>
                 <li class="navbar_pc_item_type_shl">
                     <a href="./SAMLEX-HP-5025V.html">Dầu chống rỉ SAMLEX HP 5025V</a>
@@ -148,8 +147,8 @@
                         <li class="navbar_phone_item_type_shl">
                             <a href="./SHL-SYNTHDRO-32AW.html">Dầu thủy lực công nghiệp SYNTHDRO 32AW</a>
                         </li>
-                        <li class="navbar_phone_item_type_shl">
-                            <a href="./SYNTHWAY-68M.html">Dầu nhờn rãnh trượt SYNTHWAY 68M</a>
+                        <li class="navbar_phone_item_type_shl" style="background-color: rgb(34, 193, 195);">
+                            <a href="./SYNTHWAY-68M.html" style="color: #f2f2f2;">Dầu nhờn rãnh trượt SYNTHWAY 68M</a>
                         </li>
                         <li class="navbar_phone_item_type_shl">
                             <a href="./SAMLEX-HP-5025V.html">Dầu chống rỉ SAMLEX HP 5025V</a>
@@ -162,75 +161,211 @@
                     <li class="navbar_phone_menu_item_type"><a href="#">Các loại khác</a></li>
                 </ul>
                 <li class="navbar_phone_item"><a href="#">DỊCH VỤ</a></li>
-                <li class="navbar_phone_item" style="background-color: rgb(34, 193, 195);"><a href="./news.html"
-                        style="color: #f2f2f2;">TIN TỨC</a></li>
+                <li class="navbar_phone_item"><a href="./news.html">TIN TỨC</a></li>
                 <li class="navbar_phone_item"><a href="./Contact.html">LIÊN HỆ</a></li>
             </ul>
         </div>
     </nav>
     <main>
-        <section>
-            <div class="news_information" data-aos="fade-right">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
-                </div>
+        <div class="product_detail">
+            <div class="product_display" data-aos="fade-right">
+                <img class="product_image" src="./css/Oil img/SHL SYNTHWAY 68M.jpg" alt="Sản phẩm 20L">
             </div>
-            <div class="news_information" data-aos="fade-left">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
+            <div class="product_info" data-aos="fade-left">
+                <h2 class="product_type">SHL SYNTHWAY 68M</h2>
+                <h2 class="product_name">Dầu nhờn rãnh trượt</h2>
+                <p class="product_benefit"><strong>Công dụng:</strong>Dầu nhờn rãnh trượt SHL SYNTHWAY 68M là một sản
+                    phẩm đặc biệt
+                    được thiết kế để cung cấp sự bôi trơn tối ưu cho các hệ thống rãnh trượt trong máy móc công nghiệp.
+                    Dầu
+                    giúp giảm ma sát, chống mài mòn và duy trì độ chính xác của các chuyển động trong suốt quá trình gia
+                    công.
+                    Được chế tạo từ dầu gốc tổng hợp chất lượng cao và các phụ gia, SYNTHWAY 68M mang đến sự bảo vệ lâu
+                    dài cho
+                    các hệ thống máy móc đòi hỏi độ bền và hiệu quả cao.</p>
+                <div class="volume_options">
+                    <p class="product_volume"><strong>Thể tích:</strong> <span class="current_volume">20L, 200L</span>
+                    </p>
                 </div>
+                <button id="buy_product">
+                    <a href="./Contact.html">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                        <span>Nhận báo giá ngay</span>
+                    </a>
+                </button>
             </div>
-            <div class="news_information" data-aos="fade-right">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
+            <div class="container">
+                <nav class="table-of-contents" data-aos="fade-up-out">
+                    <h2>Mục Lục</h2>
+                    <ol>
+                        <li><a href="#overview">Tổng Quan Sản Phẩm</a></li>
+                        <li><a href="#technical-specs">Đặc Tính Kỹ Thuật</a></li>
+                        <li><a href="#applications">Ứng Dụng</a></li>
+                        <li><a href="#benefits">Ưu Điểm</a></li>
+                        <li><a href="#guidelines">Hướng Dẫn Sử Dụng</a></li>
+                        <li><a href="#frequently-asked-questions">Câu Hỏi Thường Gặp</a></li>
+                        <li><a href="#testimonials">Khách Hàng Nói Gì?</a></li>
+                    </ol>
+                </nav>
+                <section id="overview" class="product-overview" data-aos="flip-down">
+                    <h2>Tổng Quan Sản Phẩm</h2>
+                    <p>
+                        **SHL SYNTHWAY 68M** là dầu nhờn rãnh trượt được phát triển để bôi trơn hiệu quả cho các hệ
+                        thống
+                        trượt trong
+                        các máy công cụ, giúp bảo vệ các bộ phận máy khỏi mài mòn và giữ cho quá trình gia công chính
+                        xác và
+                        ổn định.
+                        Sản phẩm này đặc biệt thích hợp cho các máy móc yêu cầu độ bền cao và khả năng hoạt động ổn định
+                        trong điều kiện
+                        môi trường khắc nghiệt.
+                    </p>
+                    <p>
+                        Được sản xuất bởi <strong>SHL Lubricants</strong>, sản phẩm này mang lại sự bảo vệ tối ưu cho
+                        các hệ
+                        thống cơ khí
+                        phức tạp, đồng thời đảm bảo khả năng hoạt động lâu dài của các thiết bị.
+                    </p>
+                </section>
+                <section id="technical-specs" class="technical-specs" data-aos="zoom-in">
+                    <h2>Đặc Tính Kỹ Thuật</h2>
+                    <ul>
+                        <li><strong>Độ nhớt:</strong> ISO VG 68 - Đảm bảo sự bôi trơn và chống mài mòn tối ưu cho các hệ
+                            thống rãnh trượt.</li>
+                        <li><strong>Khả năng chống mài mòn:</strong> Dầu cung cấp khả năng chống mài mòn mạnh mẽ, bảo vệ
+                            các
+                            bộ phận
+                            cơ khí khỏi sự mài mòn khi máy hoạt động.
+                        </li>
+                        <li><strong>Khả năng chống oxy hóa:</strong> Giảm thiểu sự hình thành cặn bẩn, bảo vệ hệ thống
+                            khỏi
+                            quá trình
+                            oxy hóa, kéo dài tuổi thọ dầu.
+                        </li>
+                        <li><strong>Ổn định nhiệt:</strong> Dầu duy trì hiệu quả bôi trơn ngay cả trong môi trường nhiệt
+                            độ
+                            cao, giúp máy
+                            móc hoạt động ổn định.
+                        </li>
+                        <li><strong>Khả năng tách nước:</strong> Dầu có khả năng tách nước tốt, tránh tình trạng mưa
+                            hoặc ẩm
+                            ướt trong
+                            các hệ thống trượt.
+                        </li>
+                    </ul>
+                    <table data-aos="zoom-out">
+                        <thead>
+                            <tr>
+                                <th>Chỉ số</th>
+                                <th>Giá trị</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Độ nhớt ở 40°C (cSt)</td>
+                                <td>68</td>
+                            </tr>
+                            <tr>
+                                <td>Độ nhớt ở 100°C (cSt)</td>
+                                <td>~8.5</td>
+                            </tr>
+                            <tr>
+                                <td>Chỉ số độ nhớt (VI)</td>
+                                <td>>100</td>
+                            </tr>
+                            <tr>
+                                <td>Điểm đông đặc (°C)</td>
+                                <td>-15°C</td>
+                            </tr>
+                            <tr>
+                                <td>Điểm chớp cháy (°C)</td>
+                                <td>>200°C</td>
+                            </tr>
+                            <tr>
+                                <td>Khả năng tách nước</td>
+                                <td>Tốt</td>
+                            </tr>
+                            <tr>
+                                <td>Chống tạo bọt</td>
+                                <td>Tốt</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </section>
+                <section id="applications" class="product-applications" data-aos="fade-right">
+                    <h2>Ứng Dụng</h2>
+                    <p>Dầu nhờn rãnh trượt SHL SYNTHWAY 68M được sử dụng trong các máy công cụ yêu cầu bôi trơn tối ưu
+                        cho
+                        hệ thống
+                        trượt:</p>
+                    <ul>
+                        <li>Máy gia công chính xác và máy tiện CNC.</li>
+                        <li>Máy mài và máy khoan với các hệ thống rãnh trượt.</li>
+                        <li>Hệ thống máy móc yêu cầu dầu nhờn có khả năng chống mài mòn cao và ổn định nhiệt.</li>
+                        <li>Thiết bị yêu cầu dầu bôi trơn hiệu quả trong điều kiện môi trường ẩm ướt hoặc nhiệt độ cao.
+                        </li>
+                    </ul>
+                </section>
+                <section id="benefits" class="product-benefits" data-aos="fade-left">
+                    <h2>Ưu Điểm</h2>
+                    <p>SHL SYNTHWAY 68M mang lại những lợi ích nổi bật:</p>
+                    <ul>
+                        <li><strong>Giảm thiểu ma sát:</strong> Giảm ma sát giữa các bộ phận cơ khí, nâng cao độ chính
+                            xác
+                            và hiệu suất
+                            gia công.
+                        </li>
+                        <li><strong>Chống mài mòn hiệu quả:</strong> Bảo vệ hệ thống rãnh trượt khỏi sự mài mòn, kéo dài
+                            tuổi thọ thiết bị.</li>
+                        <li><strong>Ổn định nhiệt:</strong> Dầu duy trì tính năng bôi trơn hiệu quả trong điều kiện
+                            nhiệt độ
+                            cao, đảm bảo
+                            hoạt động của máy móc.
+                        </li>
+                        <li><strong>Tiết kiệm chi phí bảo trì:</strong> Giảm thiểu sự hỏng hóc và chi phí bảo trì nhờ
+                            hiệu
+                            suất bôi trơn
+                            vượt trội.
+                        </li>
+                    </ul>
+                </section>
+                <section id="guidelines" class="usage-guidelines" data-aos="zoom-in-down">
+                    <h2>Hướng Dẫn Sử Dụng</h2>
+                    <ol>
+                        <li>Đảm bảo hệ thống rãnh trượt sạch sẽ và không có tạp chất trước khi thay dầu.</li>
+                        <li>Không pha trộn với các loại dầu khác để duy trì hiệu quả tối ưu của sản phẩm.</li>
+                        <li>Kiểm tra định kỳ và thay dầu theo chu kỳ bảo trì để đảm bảo hiệu quả bôi trơn liên tục.</li>
+                    </ol>
+                </section>
+                <section id="frequently-asked-questions" class="faq" data-aos="flip-up">
+                    <h2>Câu Hỏi Thường Gặp</h2>
+                    <ul>
+                        <li><strong>Dầu SYNTHWAY 68M có thể sử dụng cho máy nào?</strong>
+                            <p>Đây là loại dầu phù hợp cho các máy gia công, máy tiện CNC, máy mài và máy khoan với hệ
+                                thống
+                                rãnh
+                                trượt.</p>
+                        </li>
+                        <li><strong>Làm sao để nhận biết dầu cần thay?</strong>
+                            <p>Đổi màu dầu hoặc có mùi hôi có thể là dấu hiệu dầu cần được thay mới.</p>
+                        </li>
+                    </ul>
+                </section>
+                <section id="testimonials" class="customer-reviews" data-aos="flip-left">
+                    <h2>Khách Hàng Nói Gì?</h2>
+                    <div class="testimonial">
+                        <p><strong>Mr. Thanh</strong>: "SYNTHWAY 68M đã giúp cải thiện đáng kể độ chính xác của máy móc
+                            trong các
+                            quy trình gia công của chúng tôi." </p>
                     </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
-                </div>
-            </div>
-            <div class="news_information" data-aos="fade-left">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
+                    <div class="testimonial">
+                        <p><strong>Ms. Lan</strong>: "Sản phẩm này rất ổn định, tôi đã sử dụng cho nhiều loại máy và
+                            luôn
+                            cảm thấy
+                            hài lòng." </p>
                     </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
-                </div>
+                </section>
             </div>
-        </section>
     </main>
     <footer>
         <div id="send_email_contact" data-aos="slide-right">
@@ -280,12 +415,11 @@
                 </path>
             </svg>
         </div>
-
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script>
         AOS.init({
-            duration: 800,
+            duration: 1000,
             once: true
         });
     </script>
