--- a/WL-68A.html
+++ b/WL-68A.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/news.css">
+    <link rel="stylesheet" href="./css/product.css">
     <link rel="icon" href="./css/img/LOGO DKTECH.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
@@ -62,8 +62,7 @@
                 <li class="navbar_pc_item"><a href="#">GIỚI THIỆU</a></li>
                 <li class="navbar_pc_item"><a href="#">DẦU NHỚT CHÍNH HÃNG</a></li>
                 <li class="navbar_pc_item"><a href="#">DỊCH VỤ</a></li>
-                <li class="navbar_pc_item" style="background-color: rgb(0, 102, 255);"><a href="./news.html"
-                        style="color: #f2f2f2;">TIN TỨC</a></li>
+                <li class="navbar_pc_item"><a href="./news.html">TIN TỨC</a></li>
                 <li class="navbar_pc_item"><a href="./Contact.html">LIÊN HỆ</a></li>
             </ul>
         </div>
@@ -81,8 +80,8 @@
                 <li class="navbar_pc_item_type_tectyl">
                     <a href="./HYDRAULIC-32.html">Dầu thủy lực công nghiệp HYDRAULIC 32</a>
                 </li>
-                <li class="navbar_pc_item_type_tectyl">
-                    <a href="./WL-68A.html">Dầu rãnh trượt cao cấp WL 68A</a>
+                <li class="navbar_pc_item_type_tectyl" style="background-color: rgb(3, 52, 181);">
+                    <a href="./WL-68A.html" style="color: #f2f2f2;">Dầu rãnh trượt cao cấp WL 68A</a>
                 </li>
             </ul>
             <ul id="navbar_pc_menu_item_shl">
@@ -129,8 +128,8 @@
                         <li class="navbar_phone_item_type_tectyl">
                             <a href="./HYDRAULIC-32.html">Dầu thủy lực công nghiệp HYDRAULIC 32</a>
                         </li>
-                        <li class="navbar_phone_item_type_tectyl">
-                            <a href="./WL-68A.html">Dầu rãnh trượt cao cấp WL 68A</a>
+                        <li class="navbar_phone_item_type_tectyl" style="background-color: rgb(34, 193, 195);">
+                            <a href="./WL-68A.html" style="color: #f2f2f2;">Dầu rãnh trượt cao cấp WL 68A</a>
                         </li>
                     </ul>
                     <li class="navbar_phone_menu_item_type">
@@ -162,75 +161,162 @@
                     <li class="navbar_phone_menu_item_type"><a href="#">Các loại khác</a></li>
                 </ul>
                 <li class="navbar_phone_item"><a href="#">DỊCH VỤ</a></li>
-                <li class="navbar_phone_item" style="background-color: rgb(34, 193, 195);"><a href="./news.html"
-                        style="color: #f2f2f2;">TIN TỨC</a></li>
+                <li class="navbar_phone_item"><a href="./news.html">TIN TỨC</a></li>
                 <li class="navbar_phone_item"><a href="./Contact.html">LIÊN HỆ</a></li>
             </ul>
         </div>
     </nav>
     <main>
-        <section>
-            <div class="news_information" data-aos="fade-right">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
-                </div>
+        <div class="product_detail">
+            <div class="product_display" data-aos="fade-left">
+                <img class="product_image" src="./css/Oil img/tectyl wl68a.jpg" alt="Sản phẩm WL 68A">
             </div>
-            <div class="news_information" data-aos="fade-left">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
+            <div class="product_info" data-aos="fade-right">
+                <h2 class="product_type">TECTYL WL 68A</h2>
+                <h2 class="product_name">Dầu rãnh trượt cao cấp</h2>
+                <p class="product_benefit"><strong>Công dụng:</strong> WL 68A là dầu rãnh trượt chất lượng cao, đặc biệt
+                    hiệu quả trong việc bôi trơn và bảo vệ các bề mặt kim loại, nhất là trong các hệ thống máy móc có
+                    trục quay, trục vít, và rãnh trượt. Dầu giúp tăng cường khả năng bôi trơn, giảm thiểu sự ma sát, bảo
+                    vệ bề mặt kim loại khỏi sự mài mòn và ăn mòn, đồng thời làm giảm tiếng ồn và tăng cường hiệu suất
+                    hoạt động của các thiết bị.</p>
+                <div class="volume_options">
+                    <p class="product_volume"><strong>Thể tích:</strong> <span class="current_volume">20L, 200L</span>
+                    </p>
                 </div>
+                <button id="buy_product">
+                    <a href="./Contact.html">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                        <span>Nhận báo giá ngay</span>
+                    </a>
+                </button>
             </div>
-            <div class="news_information" data-aos="fade-right">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
-                </div>
-            </div>
-            <div class="news_information" data-aos="fade-left">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
-                </div>
-            </div>
-        </section>
+        </div>
+        <div class="container">
+            <nav class="table-of-contents" data-aos="fade-up-out">
+                <h2>Mục Lục</h2>
+                <ol>
+                    <li><a href="#overview">Tổng Quan Sản Phẩm</a></li>
+                    <li><a href="#technical-specs">Đặc Tính Kỹ Thuật</a></li>
+                    <li><a href="#applications">Ứng Dụng</a></li>
+                    <li><a href="#benefits">Ưu Điểm</a></li>
+                    <li><a href="#guidelines">Hướng Dẫn Sử Dụng</a></li>
+                    <li><a href="#frequently-asked-questions">Câu Hỏi Thường Gặp</a></li>
+                    <li><a href="#testimonials">Khách Hàng Nói Gì?</a></li>
+                </ol>
+            </nav>
+            <section id="overview" class="product-overview" data-aos="flip-left">
+                <h2>Tổng Quan Sản Phẩm</h2>
+                <p>
+                    **WL 68A** là dầu rãnh trượt cao cấp, được thiết kế để sử dụng trong các hệ thống máy móc công
+                    nghiệp, đặc biệt là các máy công cụ có hệ thống trục quay và rãnh trượt. Dầu có khả năng bôi trơn
+                    tuyệt vời, giúp giảm ma sát và bảo vệ các bộ phận kim loại khỏi sự mài mòn. Đồng thời, dầu cũng giúp
+                    giảm tiếng ồn và nâng cao hiệu suất hoạt động của máy móc, tăng tuổi thọ của thiết bị.
+                </p>
+                <p>
+                    Dầu **WL 68A** giúp duy trì sự ổn định của hệ thống máy móc trong suốt quá trình vận hành, đồng thời
+                    ngăn ngừa sự tích tụ cặn bẩn và giữ cho các bộ phận máy luôn sạch sẽ, giảm thiểu chi phí bảo trì.
+                </p>
+            </section>
+            <section id="technical-specs" class="technical-specs" data-aos="zoom-in-left">
+                <h2>Đặc Tính Kỹ Thuật</h2>
+                <ul>
+                    <li><strong>Khả năng bôi trơn tuyệt vời:</strong> Giảm ma sát và bảo vệ các bề mặt kim loại khỏi sự
+                        mài mòn.</li>
+                    <li><strong>Giảm tiếng ồn:</strong> Cải thiện hiệu suất hoạt động của các thiết bị, giảm thiểu tiếng
+                        ồn trong quá trình vận hành.</li>
+                    <li><strong>Độ ổn định cao:</strong> Duy trì tính chất dầu ổn định ngay cả khi tiếp xúc với nhiệt độ
+                        và áp suất cao.</li>
+                    <li><strong>Chống ăn mòn:</strong> Giúp bảo vệ các bộ phận kim loại khỏi sự ăn mòn do tác động của
+                        môi trường làm việc.</li>
+                    <li><strong>Độ nhớt:</strong> 68 cSt (ở 40°C), đảm bảo khả năng bôi trơn tối ưu cho các hệ thống máy
+                        móc công nghiệp.</li>
+                    <li><strong>Điểm chớp cháy:</strong> >200°C, giúp đảm bảo an toàn khi sử dụng trong môi trường có
+                        nhiệt độ cao.</li>
+                </ul>
+                <table data-aos="zoom-out">
+                    <thead>
+                        <tr>
+                            <th>Chỉ số</th>
+                            <th>Giá trị</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Khả năng bôi trơn</td>
+                            <td>Rất tốt</td>
+                        </tr>
+                        <tr>
+                            <td>Giảm tiếng ồn</td>
+                            <td>Hiệu quả</td>
+                        </tr>
+                        <tr>
+                            <td>Độ ổn định nhiệt</td>
+                            <td>Cao</td>
+                        </tr>
+                        <tr>
+                            <td>Điểm chớp cháy</td>
+                            <td>+200°C</td>
+                        </tr>
+                        <tr>
+                            <td>Độ nhớt (cSt)</td>
+                            <td>68 (ở 40°C)</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+            <section id="applications" class="product-applications" data-aos="fade-up-left">
+                <h2>Ứng Dụng</h2>
+                <p>Dầu rãnh trượt **WL 68A** được sử dụng rộng rãi trong các hệ thống máy móc công nghiệp, bao gồm:</p>
+                <ul>
+                    <li>Máy công cụ có trục quay và hệ thống rãnh trượt như máy phay, máy tiện.</li>
+                    <li>Ứng dụng trong các thiết bị cần bảo vệ bề mặt kim loại khỏi sự mài mòn, đặc biệt là trong môi
+                        trường có nhiệt độ cao và áp suất lớn.</li>
+                    <li>Các máy gia công kim loại và máy móc công nghiệp trong ngành chế tạo cơ khí.</li>
+                </ul>
+            </section>
+            <section id="benefits" class="product-benefits" data-aos="zoom-in-up">
+                <h2>Ưu Điểm</h2>
+                <p>
+                    Dầu **WL 68A** mang lại nhiều lợi ích, bao gồm:
+                </p>
+                <ul>
+                    <li><strong>Bảo vệ tuyệt vời:</strong> Giảm ma sát, bảo vệ các bộ phận máy móc khỏi sự mài mòn và ăn
+                        mòn.</li>
+                    <li><strong>Giảm tiếng ồn:</strong> Dầu giúp giảm tiếng ồn và rung động trong quá trình vận hành.
+                    </li>
+                    <li><strong>Độ bền cao:</strong> Duy trì khả năng bôi trơn lâu dài ngay cả trong điều kiện hoạt động
+                        khắc nghiệt.</li>
+                    <li><strong>Tiết kiệm chi phí bảo trì:</strong> Giảm thiểu sự cố hỏng hóc và bảo dưỡng, giúp tiết
+                        kiệm chi phí bảo trì.</li>
+                </ul>
+            </section>
+            <section id="guidelines" class="usage-guidelines" data-aos="flip-up">
+                <h2>Hướng Dẫn Sử Dụng</h2>
+                <ol>
+                    <li>Đảm bảo hệ thống máy móc sạch sẽ và không có cặn bẩn trước khi đổ dầu vào.</li>
+                    <li>Chọn đúng loại dầu theo yêu cầu của hệ thống để đạt hiệu quả bôi trơn tốt nhất.</li>
+                    <li>Kiểm tra định kỳ mức dầu và thay dầu khi cần thiết để đảm bảo hiệu quả sử dụng lâu dài.</li>
+                    <li>Đảm bảo bảo quản dầu ở nơi khô ráo và thoáng mát, tránh ánh sáng trực tiếp.</li>
+                </ol>
+            </section>
+            <section id="frequently-asked-questions" class="faq" data-aos="fade-up-right">
+                <h2>Câu Hỏi Thường Gặp</h2>
+                <dl>
+                    <dt>WL 68A có thể sử dụng cho các máy móc ngoài trời không?</dt>
+                    <dd>Có, nhưng cần kiểm tra điều kiện nhiệt độ và môi trường làm việc để đảm bảo dầu hoạt động ổn
+                        định.</dd>
+                    <dt>WL 68A có cần thay định kỳ không?</dt>
+                    <dd>Có, cần thay dầu theo chu kỳ bảo trì của máy móc hoặc theo khuyến nghị của nhà sản xuất.</dd>
+                </dl>
+            </section>
+            <section id="testimonials" class="customer-reviews" data-aos="zoom-in-left">
+                <h2>Khách Hàng Nói Gì?</h2>
+                <blockquote>
+                    <p>"Dầu WL 68A giúp máy móc vận hành trơn tru và ổn định. Chúng tôi sử dụng sản phẩm này trong nhiều
+                        năm và luôn hài lòng với hiệu quả mà nó mang lại." - <strong>Doanh nghiệp D</strong></p>
+                </blockquote>
+            </section>
+        </div>
     </main>
     <footer>
         <div id="send_email_contact" data-aos="slide-right">
@@ -280,12 +366,11 @@
                 </path>
             </svg>
         </div>
-
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script>
         AOS.init({
-            duration: 800,
+            duration: 1000,
             once: true
         });
     </script>
