--- a/SHL-SYNTHDRO-32AW.html
+++ b/SHL-SYNTHDRO-32AW.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/news.css">
+    <link rel="stylesheet" href="./css/product.css">
     <link rel="icon" href="./css/img/LOGO DKTECH.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
@@ -62,8 +62,7 @@
                 <li class="navbar_pc_item"><a href="#">GIỚI THIỆU</a></li>
                 <li class="navbar_pc_item"><a href="#">DẦU NHỚT CHÍNH HÃNG</a></li>
                 <li class="navbar_pc_item"><a href="#">DỊCH VỤ</a></li>
-                <li class="navbar_pc_item" style="background-color: rgb(0, 102, 255);"><a href="./news.html"
-                        style="color: #f2f2f2;">TIN TỨC</a></li>
+                <li class="navbar_pc_item"><a href="./news.html">TIN TỨC</a></li>
                 <li class="navbar_pc_item"><a href="./Contact.html">LIÊN HỆ</a></li>
             </ul>
         </div>
@@ -92,8 +91,9 @@
                 <li class="navbar_pc_item_type_shl">
                     <a href="./SPINDLE-V5.html">Dầu nhờn trục quay SPINDLE V5</a>
                 </li>
-                <li class="navbar_pc_item_type_shl">
-                    <a href="./SHL-SYNTHDRO-32AW.html">Dầu thủy lực công nghiệp SYNTHDRO 32AW</a>
+                <li class="navbar_pc_item_type_shl" style="background-color: rgb(3, 52, 181);">
+                    <a href="./SHL-SYNTHDRO-32AW.html" style="color: #f2f2f2;">Dầu thủy lực công nghiệp SYNTHDRO
+                        32AW</a>
                 </li>
                 <li class="navbar_pc_item_type_shl">
                     <a href="./SYNTHWAY-68M.html">Dầu nhờn rãnh trượt SYNTHWAY 68M</a>
@@ -145,8 +145,9 @@
                         <li class="navbar_phone_item_type_shl">
                             <a href="./SPINDLE-V5.html">Dầu nhờn trục quay SPINDLE V5</a>
                         </li>
-                        <li class="navbar_phone_item_type_shl">
-                            <a href="./SHL-SYNTHDRO-32AW.html">Dầu thủy lực công nghiệp SYNTHDRO 32AW</a>
+                        <li class="navbar_phone_item_type_shl" style="background-color: rgb(34, 193, 195);">
+                            <a href="./SHL-SYNTHDRO-32AW.html" style="color: #f2f2f2;">Dầu thủy lực công nghiệp SYNTHDRO
+                                32AW</a>
                         </li>
                         <li class="navbar_phone_item_type_shl">
                             <a href="./SYNTHWAY-68M.html">Dầu nhờn rãnh trượt SYNTHWAY 68M</a>
@@ -162,75 +163,194 @@
                     <li class="navbar_phone_menu_item_type"><a href="#">Các loại khác</a></li>
                 </ul>
                 <li class="navbar_phone_item"><a href="#">DỊCH VỤ</a></li>
-                <li class="navbar_phone_item" style="background-color: rgb(34, 193, 195);"><a href="./news.html"
-                        style="color: #f2f2f2;">TIN TỨC</a></li>
+                <li class="navbar_phone_item"><a href="./news.html">TIN TỨC</a></li>
                 <li class="navbar_phone_item"><a href="./Contact.html">LIÊN HỆ</a></li>
             </ul>
         </div>
     </nav>
     <main>
-        <section>
-            <div class="news_information" data-aos="fade-right">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
-                </div>
+        <div class="product_detail">
+            <div class="product_display" data-aos="fade-right">
+                <img class="product_image" src="./css/Oil img/SHL SYNTHDRO 32AW.jpg" alt="Sản phẩm 20L">
             </div>
-            <div class="news_information" data-aos="fade-left">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
+            <div class="product_info" data-aos="fade-left">
+                <h2 class="product_type">SHL SYNTHDRO 32AW</h2>
+                <h2 class="product_name">Dầu thủy lực công nghiệp</h2>
+                <p class="product_benefit"><strong>Công dụng:</strong>Dầu thủy lực SHL SYNTHDRO 32 AW được chế tạo từ
+                    dầu gốc chất lượng cao, giúp ngăn ngừa quá trình hóa đặc và hình thành cặn, kéo dài tuổi thọ dầu.
+                    Với hệ phụ gia đặc biệt chống mài mòn, chống gỉ và ôxy hóa, dầu giúp bảo vệ bề mặt kim loại và ngăn
+                    cặn gỉ, cặn bám làm hỏng thiết bị. Dầu còn có khả năng tách nước tốt, ổn định, mang lại tính năng
+                    lọc sạch tuyệt vời ngay cả khi bị nhiễm nước, đồng thời đảm bảo vận hành êm ái và hiệu quả cho hệ
+                    thống thủy lực.</p>
+                <div class="volume_options">
+                    <p class="product_volume"><strong>Thể tích:</strong> <span class="current_volume">20L, 200L</span>
+                    </p>
                 </div>
+                <button id="buy_product">
+                    <a href="./Contact.html">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                        <span>Nhận báo giá ngay</span>
+                    </a>
+                </button>
             </div>
-            <div class="news_information" data-aos="fade-right">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
+        </div>
+        <div class="container">
+            <nav class="table-of-contents" data-aos="fade-up-out">
+                <h2>Mục Lục</h2>
+                <ol>
+                    <li><a href="#overview">Tổng Quan Sản Phẩm</a></li>
+                    <li><a href="#technical-specs">Đặc Tính Kỹ Thuật</a></li>
+                    <li><a href="#applications">Ứng Dụng</a></li>
+                    <li><a href="#benefits">Ưu Điểm</a></li>
+                    <li><a href="#guidelines">Hướng Dẫn Sử Dụng</a></li>
+                    <li><a href="#frequently-asked-questions">Câu Hỏi Thường Gặp</a></li>
+                    <li><a href="#testimonials">Khách Hàng Nói Gì?</a></li>
+                </ol>
+            </nav>
+            <section id="overview" class="product-overview" data-aos="flip-down">
+                <h2>Tổng Quan Sản Phẩm</h2>
+                <p>
+                    **SHL SYNTHDRO 32AW** là một loại dầu thủy lực tổng hợp chất lượng cao được thiết kế dành riêng cho
+                    các
+                    hệ thống công nghiệp yêu cầu khả năng chịu áp lực lớn và hoạt động bền bỉ. Sản phẩm này không chỉ
+                    cung
+                    cấp khả năng bôi trơn tối ưu mà còn bảo vệ các linh kiện khỏi mài mòn, gỉ sét và quá nhiệt.
+                </p>
+                <p>
+                    Loại dầu này được sản xuất bởi <strong>SHL Lubricants</strong>, thương hiệu nổi tiếng từ Hàn Quốc.
+                    Với
+                    công thức tiên tiến và phụ gia chống mài mòn (AW), SYNTHDRO 32AW là lựa chọn lý tưởng cho các hệ
+                    thống
+                    thủy lực hiện đại.
+                </p>
+            </section>
+            <section id="technical-specs" class="technical-specs" data-aos="zoom-in">
+                <h2>Đặc Tính Kỹ Thuật</h2>
+                <ul>
+                    <li><strong>Độ nhớt:</strong> 32AW (ISO VG 32) - Đảm bảo khả năng bôi trơn và làm mát hiệu quả trong
+                        nhiều điều kiện làm việc khác nhau.</li>
+                    <li><strong>Chỉ số độ nhớt cao:</strong> Giúp dầu duy trì độ nhớt ổn định trong dải nhiệt độ rộng,
+                        từ đó cải thiện hiệu suất của hệ thống.</li>
+                    <li><strong>Khả năng chống mài mòn vượt trội:</strong> Nhờ hệ phụ gia tiên tiến, dầu SYNTHDRO 32AW
+                        bảo vệ các bộ phận kim loại khỏi sự mài mòn, kéo dài tuổi thọ của thiết bị.</li>
+                    <li><strong>Khả năng chống oxy hóa:</strong> Ngăn chặn quá trình oxy hóa dầu, giảm thiểu sự hình
+                        thành cặn bẩn và kéo dài tuổi thọ của dầu.</li>
+                    <li><strong>Khả năng tách nước tốt:</strong> Giúp loại bỏ nhanh chóng nước khỏi hệ thống, ngăn ngừa
+                        sự phát triển của vi khuẩn và nấm.</li>
+                    <li><strong>Tính ổn định nhiệt:</strong> Duy trì độ nhớt và tính năng ổn định ngay cả ở nhiệt độ
+                        cao.</li>
+                </ul>
+                <table data-aos="zoom-out">
+                    <thead>
+                        <tr>
+                            <th>Chỉ số</th>
+                            <th>Giá trị</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Độ nhớt ở 40°C (cSt)</td>
+                            <td>32</td>
+                        </tr>
+                        <tr>
+                            <td>Độ nhớt ở 100°C (cSt)</td>
+                            <td>~5.5</td>
+                        </tr>
+                        <tr>
+                            <td>Chỉ số độ nhớt (VI)</td>
+                            <td>>100</td>
+                        </tr>
+                        <tr>
+                            <td>Điểm đông đặc (°C)</td>
+                            <td>-25°C</td>
+                        </tr>
+                        <tr>
+                            <td>Điểm chớp cháy (°C)</td>
+                            <td>>200°C</td>
+                        </tr>
+                        <tr>
+                            <td>Khả năng tách nước</td>
+                            <td>Xuất sắc</td>
+                        </tr>
+                        <tr>
+                            <td>Chống tạo bọt</td>
+                            <td>Tốt</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <p>
+                    Các chỉ số này giúp dầu duy trì hiệu suất cao trong mọi điều kiện vận hành, kể cả khi áp suất và
+                    nhiệt
+                    độ biến đổi mạnh.
+                </p>
+            </section>
+            <section id="applications" class="product-applications" data-aos="fade-right">
+                <h2>Ứng Dụng</h2>
+                <p>Dầu thủy lực SHL SYNTHDRO 32AW có thể được sử dụng trong nhiều ngành công nghiệp khác nhau:</p>
+                <ul>
+                    <li>Hệ thống thủy lực của máy ép nhựa, máy dập, và máy gia công kim loại.</li>
+                    <li>Hệ thống làm mát hoặc truyền động yêu cầu dầu chống mài mòn cao.</li>
+                    <li>Ứng dụng trong môi trường nhiệt độ thấp hoặc ngoài trời nhờ khả năng hoạt động ổn định ở -25°C.
+                    </li>
+                    <li>Thiết bị yêu cầu dầu có khả năng tách nước xuất sắc và chống tạo bọt.</li>
+                </ul>
+            </section>
+            <section id="benefits" class="product-benefits" data-aos="fade-left">
+                <h2>Ưu Điểm</h2>
+                <p>
+                    Tại sao bạn nên chọn SHL SYNTHDRO 32AW thay vì các sản phẩm khác trên thị trường? Đây là những lợi
+                    ích
+                    vượt trội:
+                </p>
+                <ul>
+                    <li><strong>Tối ưu hóa hiệu suất hệ thống:</strong> Giúp hệ thống hoạt động ổn định, trơn tru và
+                        hiệu quả hơn.</li>
+                    <li><strong>Kéo dài tuổi thọ thiết bị:</strong> Bảo vệ các bộ phận kim loại khỏi sự mài mòn, ăn mòn.
+                    </li>
+                    <li><strong>Giảm thiểu chi phí bảo trì:</strong> Nhờ khả năng chống mài mòn, chống oxy hóa và tách
+                        nước tốt, dầu SYNTHDRO 32AW giúp giảm tần suất thay dầu và sửa chữa.</li>
+                    <li><strong>Thân thiện với môi trường:</strong> Sản phẩm được sản xuất theo tiêu chuẩn quốc tế, đảm
+                        bảo an toàn cho người sử dụng và môi trường.</li>
+                </ul>
+            </section>
+            <section id="guidelines" class="usage-guidelines" data-aos="zoom-in-down">
+                <h2>Hướng Dẫn Sử Dụng</h2>
+                <ol>
+                    <li>Đảm bảo hệ thống thủy lực được làm sạch trước khi sử dụng SHL SYNTHDRO 32AW.</li>
+                    <li>Không pha trộn dầu này với bất kỳ loại dầu nào khác.</li>
+                    <li>Kiểm tra định kỳ mức dầu và thay dầu theo khuyến nghị của nhà sản xuất máy móc.</li>
+                    <li>Bảo quản dầu ở nơi khô ráo, thoáng mát, tránh tiếp xúc trực tiếp với ánh nắng mặt trời.</li>
+                </ol>
+            </section>
+            <section id="frequently-asked-questions" class="faq" data-aos="zoom-in-up">
+                <h2>Câu Hỏi Thường Gặp</h2>
                 <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
+                    <p><strong>Q: Dầu SHL SYNTHDRO 32AW phù hợp với những loại máy nào?</strong></p>
+                    <p>A: Dầu này phù hợp với các hệ thống thủy lực yêu cầu khả năng chống mài mòn cao, như máy ép nhựa,
+                        máy
+                        dập, và máy gia công kim loại.</p>
                 </div>
-            </div>
-            <div class="news_information" data-aos="fade-left">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
                 <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
+                    <p><strong>Q: Bao lâu nên thay dầu một lần?</strong></p>
+                    <p>A: Chu kỳ thay dầu phụ thuộc vào môi trường làm việc và yêu cầu của nhà sản xuất, nhưng thông
+                        thường
+                        là 3000 - 5000 giờ vận hành.</p>
                 </div>
-            </div>
-        </section>
+            </section>
+            <section id="testimonials" class="testimonials" data-aos="zoom-in-right">
+                <h2>Khách Hàng Nói Gì?</h2>
+                <blockquote>
+                    "Chúng tôi đã sử dụng SHL SYNTHDRO 32AW cho hệ thống máy ép nhựa của mình. Hiệu suất rất ổn định và
+                    chi
+                    phí bảo trì đã giảm đáng kể!" – Công ty ABC
+                </blockquote>
+                <blockquote>
+                    "Dầu này thực sự đáng đồng tiền bát gạo. Tôi đặc biệt thích khả năng chống tạo bọt, giúp máy hoạt
+                    động
+                    trơn tru hơn." – Anh Nguyễn Văn B
+                </blockquote>
+            </section>
+        </div>
     </main>
     <footer>
         <div id="send_email_contact" data-aos="slide-right">
@@ -285,7 +405,7 @@
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script>
         AOS.init({
-            duration: 800,
+            duration: 1000,
             once: true
         });
     </script>
