--- a/SPINDLE-V10.html
+++ b/SPINDLE-V10.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/news.css">
+    <link rel="stylesheet" href="./css/product.css">
     <link rel="icon" href="./css/img/LOGO DKTECH.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
@@ -62,8 +62,7 @@
                 <li class="navbar_pc_item"><a href="#">GIỚI THIỆU</a></li>
                 <li class="navbar_pc_item"><a href="#">DẦU NHỚT CHÍNH HÃNG</a></li>
                 <li class="navbar_pc_item"><a href="#">DỊCH VỤ</a></li>
-                <li class="navbar_pc_item" style="background-color: rgb(0, 102, 255);"><a href="./news.html"
-                        style="color: #f2f2f2;">TIN TỨC</a></li>
+                <li class="navbar_pc_item"><a href="./news.html">TIN TỨC</a></li>
                 <li class="navbar_pc_item"><a href="./Contact.html">LIÊN HỆ</a></li>
             </ul>
         </div>
@@ -86,8 +85,8 @@
                 </li>
             </ul>
             <ul id="navbar_pc_menu_item_shl">
-                <li class="navbar_pc_item_type_shl">
-                    <a href="./SPINDLE-V10.html">Dầu nhờn trục quay SPINDLE V10</a>
+                <li class="navbar_pc_item_type_shl" style="background-color: rgb(3, 52, 181);">
+                    <a href="./SPINDLE-V10.html" style="color: #f2f2f2;">Dầu nhờn trục quay SPINDLE V10</a>
                 </li>
                 <li class="navbar_pc_item_type_shl">
                     <a href="./SPINDLE-V5.html">Dầu nhờn trục quay SPINDLE V5</a>
@@ -139,8 +138,8 @@
                             onclick="activeNavbarPhoneMenuItemType('navbar_phone_menu_item_shl', 'SHL');changeArrowDirection(this);"></i>
                     </li>
                     <ul id="navbar_phone_menu_item_shl">
-                        <li class="navbar_phone_item_type_shl">
-                            <a href="./SPINDLE-V10.html">Dầu nhờn trục quay SPINDLE V10</a>
+                        <li class="navbar_phone_item_type_shl" style="background-color: rgb(34, 193, 195);">
+                            <a href="./SPINDLE-V10.html" style="color: #f2f2f2;">Dầu nhờn trục quay SPINDLE V10</a>
                         </li>
                         <li class="navbar_phone_item_type_shl">
                             <a href="./SPINDLE-V5.html">Dầu nhờn trục quay SPINDLE V5</a>
@@ -162,75 +161,172 @@
                     <li class="navbar_phone_menu_item_type"><a href="#">Các loại khác</a></li>
                 </ul>
                 <li class="navbar_phone_item"><a href="#">DỊCH VỤ</a></li>
-                <li class="navbar_phone_item" style="background-color: rgb(34, 193, 195);"><a href="./news.html"
-                        style="color: #f2f2f2;">TIN TỨC</a></li>
+                <li class="navbar_phone_item"><a href="./news.html">TIN TỨC</a></li>
                 <li class="navbar_phone_item"><a href="./Contact.html">LIÊN HỆ</a></li>
             </ul>
         </div>
     </nav>
     <main>
-        <section>
-            <div class="news_information" data-aos="fade-right">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
-                </div>
+        <div class="product_detail">
+            <div class="product_display" data-aos="fade-right">
+                <img class="product_image" src="./css/Oil img/SHL SPINDLE V10.jpg" alt="Sản phẩm 20L">
             </div>
-            <div class="news_information" data-aos="fade-left">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
+            <div class="product_info" data-aos="fade-left">
+                <h2 class="product_type">SHL SPINDLE V10</h2>
+                <h2 class="product_name">Dầu nhờn trục quay</h2>
+                <p class="product_benefit"><strong>Công dụng:</strong> Dầu nhờn trục quay SHL SPINDLE V10 được phát
+                    triển đặc biệt cho các hệ thống trục quay, giúp giảm ma sát và cải thiện hiệu suất vận hành của máy
+                    móc công nghiệp. Với khả năng bôi trơn tuyệt vời, sản phẩm này giúp bảo vệ các bộ phận cơ khí khỏi
+                    sự mài mòn, kéo dài tuổi thọ trục quay. Đặc biệt, dầu có khả năng chống oxy hóa cao và không tạo
+                    bọt, giúp hệ thống hoạt động ổn định trong thời gian dài.</p>
+                <div class="volume_options">
+                    <p class="product_volume"><strong>Thể tích:</strong> <span class="current_volume">20L, 200L</span>
+                    </p>
                 </div>
+                <button id="buy_product">
+                    <a href="./Contact.html">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                        <span>Nhận báo giá ngay</span>
+                    </a>
+                </button>
             </div>
-            <div class="news_information" data-aos="fade-right">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
+        </div>
+        <div class="container">
+            <nav class="table-of-contents" data-aos="fade-up-out">
+                <h2>Mục Lục</h2>
+                <ol>
+                    <li><a href="#overview">Tổng Quan Sản Phẩm</a></li>
+                    <li><a href="#technical-specs">Đặc Tính Kỹ Thuật</a></li>
+                    <li><a href="#applications">Ứng Dụng</a></li>
+                    <li><a href="#benefits">Ưu Điểm</a></li>
+                    <li><a href="#guidelines">Hướng Dẫn Sử Dụng</a></li>
+                    <li><a href="#frequently-asked-questions">Câu Hỏi Thường Gặp</a></li>
+                    <li><a href="#testimonials">Khách Hàng Nói Gì?</a></li>
+                </ol>
+            </nav>
+            <section id="overview" class="product-overview" data-aos="flip-down">
+                <h2>Tổng Quan Sản Phẩm</h2>
+                <p>
+                    **SPINDLE V10** là một loại dầu nhờn đặc biệt được phát triển cho các hệ thống trục quay, đặc biệt
+                    trong các máy móc công nghiệp yêu cầu độ chính xác và hiệu suất cao. Dầu này giúp tối ưu hóa quá
+                    trình vận hành của trục quay, giảm thiểu mài mòn và kéo dài tuổi thọ thiết bị.
+                </p>
+                <p>
+                    Sản phẩm được sản xuất bởi <strong>SHL Lubricants</strong>, một thương hiệu nổi tiếng chuyên cung
+                    cấp các giải pháp bôi trơn cho ngành công nghiệp. SPINDLE V10 mang lại hiệu quả vượt trội nhờ công
+                    thức bôi trơn tiên tiến, bảo vệ các bộ phận trục quay trong điều kiện làm việc khắc nghiệt.
+                </p>
+            </section>
+            <section id="technical-specs" class="technical-specs" data-aos="zoom-in">
+                <h2>Đặc Tính Kỹ Thuật</h2>
+                <ul>
+                    <li><strong>Độ nhớt:</strong> 10 cSt (ISO VG 10) - Đảm bảo khả năng bôi trơn chính xác và hiệu quả
+                        cho các hệ thống trục quay.</li>
+                    <li><strong>Khả năng chống mài mòn:</strong> Đặc biệt bảo vệ các bộ phận kim loại, giảm thiểu hao
+                        mòn trong quá trình vận hành.</li>
+                    <li><strong>Khả năng chống oxy hóa:</strong> Dầu không bị oxy hóa trong thời gian dài, giúp kéo dài
+                        tuổi thọ của dầu và thiết bị.</li>
+                    <li><strong>Khả năng chống tạo bọt:</strong> Sản phẩm không tạo bọt, giúp hệ thống hoạt động ổn định
+                        và hiệu quả.</li>
+                    <li><strong>Khả năng tách nước tốt:</strong> Loại bỏ nước trong hệ thống một cách nhanh chóng, ngăn
+                        ngừa sự phát triển của vi khuẩn và nấm.</li>
+                </ul>
+                <table data-aos="zoom-out">
+                    <thead>
+                        <tr>
+                            <th>Chỉ số</th>
+                            <th>Giá trị</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Độ nhớt ở 40°C (cSt)</td>
+                            <td>10</td>
+                        </tr>
+                        <tr>
+                            <td>Độ nhớt ở 100°C (cSt)</td>
+                            <td>~4.5</td>
+                        </tr>
+                        <tr>
+                            <td>Chỉ số độ nhớt (VI)</td>
+                            <td>>100</td>
+                        </tr>
+                        <tr>
+                            <td>Điểm đông đặc (°C)</td>
+                            <td>-20°C</td>
+                        </tr>
+                        <tr>
+                            <td>Điểm chớp cháy (°C)</td>
+                            <td>>200°C</td>
+                        </tr>
+                        <tr>
+                            <td>Khả năng tách nước</td>
+                            <td>Tốt</td>
+                        </tr>
+                        <tr>
+                            <td>Chống tạo bọt</td>
+                            <td>Không có</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <p>
+                    Các chỉ số này giúp SPINDLE V10 duy trì hiệu suất bôi trơn tuyệt vời trong các điều kiện làm việc
+                    khắc nghiệt.
+                </p>
+            </section>
+            <section id="applications" class="product-applications" data-aos="fade-right">
+                <h2>Ứng Dụng</h2>
+                <p>Dầu nhờn trục quay SHL SPINDLE V10 được sử dụng trong các ứng dụng sau:</p>
+                <ul>
+                    <li>Hệ thống trục quay trong máy móc công nghiệp, máy CNC.</li>
+                    <li>Ứng dụng trong các máy gia công chính xác yêu cầu dầu có độ nhớt thấp và khả năng bôi trơn ổn
+                        định.</li>
+                    <li>Các hệ thống trục quay trong môi trường làm việc yêu cầu bôi trơn lâu dài và hiệu quả.</li>
+                </ul>
+            </section>
+            <section id="benefits" class="product-benefits" data-aos="fade-left">
+                <h2>Ưu Điểm</h2>
+                <p>
+                    Lợi ích khi sử dụng SPINDLE V10 bao gồm:
+                </p>
+                <ul>
+                    <li><strong>Giảm ma sát:</strong> Cải thiện hiệu suất và giảm mài mòn các bộ phận trục quay.</li>
+                    <li><strong>Kéo dài tuổi thọ thiết bị:</strong> Bảo vệ các bộ phận kim loại và giảm thiểu chi phí
+                        bảo trì.</li>
+                    <li><strong>Chống oxy hóa và chống tạo bọt:</strong> Dầu giữ cho hệ thống luôn ổn định và hiệu quả
+                        trong thời gian dài.</li>
+                    <li><strong>Thân thiện với môi trường:</strong> Dầu được sản xuất theo tiêu chuẩn quốc tế, đảm bảo
+                        an toàn cho người sử dụng và môi trường.</li>
+                </ul>
+            </section>
+            <section id="guidelines" class="usage-guidelines" data-aos="zoom-in-down">
+                <h2>Hướng Dẫn Sử Dụng</h2>
+                <ol>
+                    <li>Đảm bảo hệ thống trục quay được làm sạch trước khi sử dụng dầu SPINDLE V10.</li>
+                    <li>Không pha trộn dầu này với bất kỳ loại dầu nào khác.</li>
+                    <li>Kiểm tra định kỳ mức dầu và thay dầu theo khuyến nghị của nhà sản xuất thiết bị.</li>
+                    <li>Bảo quản dầu ở nơi khô ráo, thoáng mát, tránh tiếp xúc trực tiếp với ánh nắng mặt trời.</li>
+                </ol>
+            </section>
+            <section id="frequently-asked-questions" class="faq" data-aos="zoom-in-up">
+                <h2>Câu Hỏi Thường Gặp</h2>
                 <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
+                    <p><strong>Q: Dầu SPINDLE V10 có phù hợp với hệ thống máy CNC không?</strong></p>
+                    <p>A: Có, SPINDLE V10 được thiết kế đặc biệt cho các hệ thống máy CNC và các ứng dụng trục quay
+                        trong ngành công nghiệp.</p>
                 </div>
-            </div>
-            <div class="news_information" data-aos="fade-left">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
                 <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
+                    <p><strong>Q: Dầu này có thể sử dụng trong điều kiện nhiệt độ cao không?</strong></p>
+                    <p>A: SPINDLE V10 có khả năng chịu nhiệt độ cao và hoạt động tốt trong môi trường làm việc khắc
+                        nghiệt, với điểm chớp cháy trên 200°C.</p>
                 </div>
-            </div>
-        </section>
+            </section>
+            <section id="testimonials" class="testimonials" data-aos="fade-up-left">
+                <h2>Khách Hàng Nói Gì?</h2>
+                <p><strong>Mr. Phan - Giám Đốc Nhà Máy CNC:</strong> “Sản phẩm dầu SPINDLE V10 giúp máy móc của chúng
+                    tôi hoạt động mượt mà và ít phải bảo trì hơn. Chúng tôi rất hài lòng về hiệu suất của dầu này.”</p>
+            </section>
+        </div>
     </main>
     <footer>
         <div id="send_email_contact" data-aos="slide-right">
@@ -285,7 +381,7 @@
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script>
         AOS.init({
-            duration: 800,
+            duration: 1000,
             once: true
         });
     </script>
