--- a/form.html
+++ b/form.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/news.css">
-    <link rel="icon" href="./css/img/LOGO DKTECH.png" />
+    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./product.css">
+    <link rel="icon" href="./img/LOGO DKTECH.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
@@ -23,7 +23,7 @@
 <body>
     <header>
         <div id="header_logo">
-            <img src="./css/img/LOGO DKTECH.png" alt="Logo DKTECH">
+            <img src="img/LOGO DKTECH.png" alt="Logo DKTECH">
             <div>
                 <p>CÔNG TY TNHH THIẾT BỊ CÔNG NGHIỆP DKTECH VIỆT NAM</p>
                 <p>Số 58, Đường N3-7, KĐT Sinh Thái Chánh Mỹ, Tổ 15, Khu Phố Mỹ Hảo 2, Phường Chánh Mỹ, Thành Phố Thủ
@@ -62,8 +62,7 @@
                 <li class="navbar_pc_item"><a href="#">GIỚI THIỆU</a></li>
                 <li class="navbar_pc_item"><a href="#">DẦU NHỚT CHÍNH HÃNG</a></li>
                 <li class="navbar_pc_item"><a href="#">DỊCH VỤ</a></li>
-                <li class="navbar_pc_item" style="background-color: rgb(0, 102, 255);"><a href="./news.html"
-                        style="color: #f2f2f2;">TIN TỨC</a></li>
+                <li class="navbar_pc_item"><a href="./news.html">TIN TỨC</a></li>
                 <li class="navbar_pc_item"><a href="./Contact.html">LIÊN HỆ</a></li>
             </ul>
         </div>
@@ -71,38 +70,37 @@
             <ul id="navbar_pc_menu_item">
                 <li class="navbar_pc_menu_item_type"><a href="#">Tectyl</a></li>
                 <li class="navbar_pc_menu_item_type"><a href="#">SHL</a></li>
-                <li class="navbar_pc_menu_item_type"><a href="#">MOBIL</a></li>
                 <li class="navbar_pc_menu_item_type"><a href="#">Các loại khác</a></li>
             </ul>
             <ul id="navbar_pc_menu_item_tectyl">
                 <li class="navbar_pc_item_type_tectyl">
-                    <a href="./RP-361.html">Dầu chống rỉ RP 361</a>
+                    <a href="#">Dầu chống rỉ RP 361</a>
                 </li>
                 <li class="navbar_pc_item_type_tectyl">
-                    <a href="./HYDRAULIC-32.html">Dầu thủy lực công nghiệp HYDRAULIC 32</a>
+                    <a href="#">Dầu thủy lực công nghiệp HYDRAULIC 32</a>
                 </li>
                 <li class="navbar_pc_item_type_tectyl">
-                    <a href="./WL-68A.html">Dầu rãnh trượt cao cấp WL 68A</a>
+                    <a href="#">Dầu rãnh trượt cao cấp WL 68A</a>
                 </li>
             </ul>
             <ul id="navbar_pc_menu_item_shl">
                 <li class="navbar_pc_item_type_shl">
-                    <a href="./SPINDLE-V10.html">Dầu nhờn trục quay SPINDLE V10</a>
+                    <a href="#">Dầu nhờn trục quay SPINDLE V10</a>
                 </li>
                 <li class="navbar_pc_item_type_shl">
-                    <a href="./SPINDLE-V5.html">Dầu nhờn trục quay SPINDLE V5</a>
+                    <a href="#">Dầu nhờn trục quay SPINDLE V5</a>
+                </li>
+                <li class="navbar_pc_item_type_shl" style="background-color: rgb(3, 52, 181);">
+                    <a href="#" style="color: #f2f2f2;">Dầu thủy lực công nghiệp SYNTHDRO 32AW</a>
                 </li>
                 <li class="navbar_pc_item_type_shl">
-                    <a href="./SHL-SYNTHDRO-32AW.html">Dầu thủy lực công nghiệp SYNTHDRO 32AW</a>
+                    <a href="#">Dầu nhờn rãnh trượt SYNTHWAY 68M</a>
                 </li>
                 <li class="navbar_pc_item_type_shl">
-                    <a href="./SYNTHWAY-68M.html">Dầu nhờn rãnh trượt SYNTHWAY 68M</a>
+                    <a href="#">Dầu chống rỉ SAMLEX HP 5025V</a>
                 </li>
                 <li class="navbar_pc_item_type_shl">
-                    <a href="./SAMLEX-HP-5025V.html">Dầu chống rỉ SAMLEX HP 5025V</a>
-                </li>
-                <li class="navbar_pc_item_type_shl">
-                    <a href="./SAMLEX-WAXY-70A.html">Sáp chống rỉ SAMLEX WAXY 70A</a>
+                    <a href="#">Sáp chống rỉ SAMLEX WAXY 70A</a>
                 </li>
             </ul>
         </div>
@@ -111,127 +109,60 @@
             <ul>
                 <li class="navbar_phone_item"><a href="./index.html">TRANG CHỦ</a></li>
                 <li class="navbar_phone_item"><a href="#">GIỚI THIỆU</a></li>
-                <li class="navbar_phone_item">
-                    <a href="#">DẦU NHỚT CHÍNH HÃNG</a>
-                    <i class="fa-solid fa-arrow-right right-arrow"
-                        onclick="activeNavbarPhoneMenuItem('navbar_phone_menu_item');changeArrowDirection(this);"></i>
-                </li>
+                <li class="navbar_phone_item" onclick="activeNavbarPhoneMenuItem('navbar_phone_menu_item')"><a
+                        href="#">DẦU NHỚT
+                        CHÍNH HÃNG <i class="fa-solid fa-arrow-right"></i></a></li>
                 <ul id="navbar_phone_menu_item">
-                    <li class="navbar_phone_menu_item_type">
-                        <a href="#">Tectyl</a>
-                        <i class="fa-solid fa-arrow-right right-arrow"
-                            onclick="activeNavbarPhoneMenuItemType('navbar_phone_menu_item_tectyl', 'Tectyl');changeArrowDirection(this);"></i>
+                    <li class="navbar_phone_menu_item_type"
+                        onclick="activeNavbarPhoneMenuItemType('navbar_phone_menu_item_tectyl', 'Tectyl')">
+                        <a href="#">Tectyl <i class="fa-solid fa-arrow-right"></i></a>
                     </li>
                     <ul id="navbar_phone_menu_item_tectyl">
                         <li class="navbar_phone_item_type_tectyl">
-                            <a href="./RP-361.html">Dầu chống rỉ RP 361</a>
+                            <a href="#">Dầu chống rỉ RP 361</a>
                         </li>
                         <li class="navbar_phone_item_type_tectyl">
-                            <a href="./HYDRAULIC-32.html">Dầu thủy lực công nghiệp HYDRAULIC 32</a>
+                            <a href="#">Dầu thủy lực công nghiệp HYDRAULIC 32</a>
                         </li>
                         <li class="navbar_phone_item_type_tectyl">
-                            <a href="./WL-68A.html">Dầu rãnh trượt cao cấp WL 68A</a>
+                            <a href="#">Dầu rãnh trượt cao cấp WL 68A</a>
                         </li>
                     </ul>
-                    <li class="navbar_phone_menu_item_type">
-                        <a href="#">SHL</a>
-                        <i class="fa-solid fa-arrow-right right-arrow"
-                            onclick="activeNavbarPhoneMenuItemType('navbar_phone_menu_item_shl', 'SHL');changeArrowDirection(this);"></i>
+                    <li class="navbar_phone_menu_item_type"
+                        onclick="activeNavbarPhoneMenuItemType('navbar_phone_menu_item_shl', 'SHL')">
+                        <a href="#">SHL <i class="fa-solid fa-arrow-right"></i></a>
                     </li>
                     <ul id="navbar_phone_menu_item_shl">
                         <li class="navbar_phone_item_type_shl">
-                            <a href="./SPINDLE-V10.html">Dầu nhờn trục quay SPINDLE V10</a>
+                            <a href="#">Dầu nhờn trục quay SPINDLE V10</a>
                         </li>
                         <li class="navbar_phone_item_type_shl">
-                            <a href="./SPINDLE-V5.html">Dầu nhờn trục quay SPINDLE V5</a>
+                            <a href="#">Dầu nhờn trục quay SPINDLE V5</a>
+                        </li>
+                        <li class="navbar_phone_item_type_shl" style="background-color: rgb(34, 193, 195);">
+                            <a href="#" style="color: #f2f2f2;">Dầu thủy lực công nghiệp SYNTHDRO 32AW</a>
                         </li>
                         <li class="navbar_phone_item_type_shl">
-                            <a href="./SHL-SYNTHDRO-32AW.html">Dầu thủy lực công nghiệp SYNTHDRO 32AW</a>
+                            <a href="#">Dầu nhờn rãnh trượt SYNTHWAY 68M</a>
                         </li>
                         <li class="navbar_phone_item_type_shl">
-                            <a href="./SYNTHWAY-68M.html">Dầu nhờn rãnh trượt SYNTHWAY 68M</a>
+                            <a href="#">Dầu chống rỉ SAMLEX HP 5025V</a>
                         </li>
                         <li class="navbar_phone_item_type_shl">
-                            <a href="./SAMLEX-HP-5025V.html">Dầu chống rỉ SAMLEX HP 5025V</a>
-                        </li>
-                        <li class="navbar_phone_item_type_shl">
-                            <a href="./SAMLEX-WAXY-70A.html">Sáp chống rỉ SAMLEX WAXY 70A</a>
+                            <a href="#">Sáp chống rỉ SAMLEX WAXY 70A</a>
                         </li>
                     </ul>
-                    <li class="navbar_phone_menu_item_type"><a href="#">MOBIL</a></li>
                     <li class="navbar_phone_menu_item_type"><a href="#">Các loại khác</a></li>
                 </ul>
                 <li class="navbar_phone_item"><a href="#">DỊCH VỤ</a></li>
-                <li class="navbar_phone_item" style="background-color: rgb(34, 193, 195);"><a href="./news.html"
-                        style="color: #f2f2f2;">TIN TỨC</a></li>
+                <li class="navbar_phone_item"><a href="./news.html">TIN TỨC</a></li>
                 <li class="navbar_phone_item"><a href="./Contact.html">LIÊN HỆ</a></li>
             </ul>
         </div>
+        <div id="navbar_phone_support">
+        </div>
     </nav>
-    <main>
-        <section>
-            <div class="news_information" data-aos="fade-right">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
-                </div>
-            </div>
-            <div class="news_information" data-aos="fade-left">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
-                </div>
-            </div>
-            <div class="news_information" data-aos="fade-right">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
-                </div>
-            </div>
-            <div class="news_information" data-aos="fade-left">
-                <img src="./css/img/LOGO DKTECH.png" alt="Logo Công ty DKTECH">
-                <div>
-                    <h1 class="title">Thông báo lịch nghỉ Tết Nguyên Đán 2025</h1>
-                    <div class="news_container">
-                        <h3 class="type"><i class="fa-solid fa-paperclip"></i>Lịch làm việc</h3>
-                        <div class="vertical-line"></div>
-                        <h3 class="date_post"><i class="fa-regular fa-calendar-days"></i>20/01/2025</h3>
-                    </div>
-                    <h3 class="information">
-                        Công ty DKTECH xin thông báo lịch nghỉ Tết Nguyên Đán.
-                    </h3>
-                    <button><a href="#">Chi tiết</a></button>
-                </div>
-            </div>
-        </section>
-    </main>
+
     <footer>
         <div id="send_email_contact" data-aos="slide-right">
             <h2>Theo Dõi Ưu Đãi</h2>
@@ -280,16 +211,33 @@
                 </path>
             </svg>
         </div>
-
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script>
         AOS.init({
-            duration: 800,
+            duration: 1000,
             once: true
         });
     </script>
-    <script src="./js/script.js"></script>
+    <script src="./script.js"></script>
+    <script>
+        document.querySelectorAll(".product_detail").forEach((productDetail) => {
+            const image = productDetail.querySelector(".product_image");
+            const volumeButtons = productDetail.querySelectorAll(".volume_btn");
+            const currentVolume = productDetail.querySelector(".current_volume");
+
+            volumeButtons.forEach((button) => {
+                button.addEventListener("click", () => {
+                    const newImage = button.dataset.image;
+                    const newVolume = button.dataset.volume;
+                    image.src = newImage;
+                    currentVolume.textContent = newVolume;
+                    volumeButtons.forEach((btn) => btn.classList.remove("active"));
+                    button.classList.add("active");
+                });
+            });
+        });
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
